--- a/res/values-af/strings.xml
+++ b/res/values-af/strings.xml
@@ -412,6 +412,28 @@
     <string name="security_settings_fingerprint_single_face_watch_preference_summary" msgid="764951912234638192">"Gesig, vingerafdruk en <xliff:g id="WATCH">%s</xliff:g> is bygevoeg"</string>
     <string name="security_settings_fingerprint_multiple_face_watch_preference_summary" msgid="3935500711366489380">"Gesig, vingerafdrukke en <xliff:g id="WATCH">%s</xliff:g> is bygevoeg"</string>
     <string name="mandatory_biometrics_prompt_description" msgid="6790144699440050735">"Identiteitkontrole is aan en vereis ’n biometrie"</string>
+    <!-- no translation found for go_to_settings (4394928396153474179) -->
+    <skip />
+    <!-- no translation found for identity_check_lockout_error_title (7486409651908283892) -->
+    <skip />
+    <!-- no translation found for identity_check_lockout_error_description_1 (4882147327291296884) -->
+    <skip />
+    <!-- no translation found for identity_check_lockout_error_two_factor_auth_description_1 (8369894114882274736) -->
+    <skip />
+    <!-- no translation found for identity_check_lockout_error_description_2 (5512321457771307067) -->
+    <skip />
+    <!-- no translation found for identity_check_general_error_title (5073929400896102674) -->
+    <skip />
+    <!-- no translation found for identity_check_general_error_description_1 (5260846996256699095) -->
+    <skip />
+    <!-- no translation found for identity_check_biometric_error_cancel (3353689146211669291) -->
+    <skip />
+    <!-- no translation found for identity_check_biometric_error_ok (4535306787363107304) -->
+    <skip />
+    <!-- no translation found for go_to_identity_check (5215846637575231800) -->
+    <skip />
+    <!-- no translation found for identity_check_lockout_error_lock_screen (3021787511681444051) -->
+    <skip />
     <string name="security_settings_remoteauth_preference_title" msgid="8319680328086089533">"Remote Authenticator-ontsluiting"</string>
     <string name="security_settings_remoteauth_preference_summary" msgid="1507004469316635196">"Horlosie is bygevoeg"</string>
     <string name="security_settings_remoteauth_enroll_introduction_title" msgid="2151004795778999671">"Stel jou horlosie op"</string>
@@ -796,6 +818,8 @@
     <string name="lockpassword_password_requires_nonnumerical" msgid="389687423482993365">"{count,plural, =1{Moet minstens 1 nienumeriese karakter bevat}other{Moet minstens # nienumeriese karakters bevat}}"</string>
     <string name="lockpassword_password_recently_used" msgid="5341218079730167191">"Toesteladministrateur laat nie toe dat jy \'n onlangse wagwoord gebruik nie"</string>
     <string name="lockpassword_pin_no_sequential_digits" msgid="5843639256988031272">"Stygende, dalende of herhalende volgorde van syfers word nie toegelaat nie"</string>
+    <!-- no translation found for lockpassword_password_no_sequential_characters (2191567105898075606) -->
+    <skip />
     <string name="lockpassword_confirm_label" msgid="560897521093566777">"Bevestig"</string>
     <string name="lockpassword_clear_label" msgid="311359833434539894">"Vee uit"</string>
     <string name="lockpassword_credential_changed" msgid="5934778179732392028">"Skermslot is reeds verander. Probeer weer met die nuwe skermslot."</string>
@@ -1277,21 +1301,17 @@
     <string name="dark_ui_summary_off_auto_mode_auto" msgid="6766831395970887213">"Sal outomaties aanskakel met sonsondergang"</string>
     <string name="dark_ui_summary_off_auto_mode_custom" msgid="1345906088326708376">"Sal outomaties aanskakel om <xliff:g id="ID_1">%1$s</xliff:g>"</string>
     <string name="dark_ui_summary_off_auto_mode_custom_bedtime" msgid="7759826673214624622">"Sal outomaties aanskakel met slaaptyd"</string>
-    <!-- no translation found for dark_ui_summary_off_auto_mode_modes (2672694802103388896) -->
-    <skip />
+    <string name="dark_ui_summary_off_auto_mode_modes" msgid="2672694802103388896">"Sal aanskakel wanneer <xliff:g id="ID_1">%1$s</xliff:g> begin"</string>
     <string name="dark_ui_summary_on_auto_mode_never" msgid="2468597062391435521">"Sal nooit outomaties afskakel nie"</string>
     <string name="dark_ui_summary_on_auto_mode_auto" msgid="5553376115092648636">"Sal outomaties afskakel met sonsopkoms"</string>
     <string name="dark_ui_summary_on_auto_mode_custom" msgid="2526935680241734784">"Sal outomaties afskakel om <xliff:g id="ID_1">%1$s</xliff:g>"</string>
     <string name="dark_ui_summary_on_auto_mode_custom_bedtime" msgid="1976993025762551246">"Sal outomaties afskakel ná slaaptyd"</string>
-    <!-- no translation found for dark_ui_summary_on_auto_mode_modes (7769594183411785087) -->
-    <skip />
+    <string name="dark_ui_summary_on_auto_mode_modes" msgid="7769594183411785087">"Sal afskakel wanneer <xliff:g id="ID_1">%1$s</xliff:g> eindig"</string>
     <string name="dark_ui_text" msgid="4392646155331126666">"Donkertema gebruik op sommige skerms \'n swart agtergrond om te help om die battery langer te laat hou. Donkertemaskedules wag totdat jou skerm af is voordat hulle aanskakel."</string>
     <string name="dark_ui_bedtime_footer_summary" msgid="5576501833145170581">"Donkertema volgs tans jou Slaaptydmodus-skedule"</string>
     <string name="dark_ui_bedtime_footer_action" msgid="1493095487994054339">"Slaaptydmodus-instellings"</string>
-    <!-- no translation found for dark_ui_modes_footer_summary (1041117250408363391) -->
-    <skip />
-    <!-- no translation found for dark_ui_modes_footer_action (80671811848446248) -->
-    <skip />
+    <string name="dark_ui_modes_footer_summary" msgid="1041117250408363391">"{count,plural,offset:2 =0{Modusse kan ook donkertema aktiveer}=1{{mode_1} aktiveer ook donkertema}=2{{mode_1} en {mode_2} aktiveer ook donkertema}=3{{mode_1}, {mode_2} en {mode_3} aktiveer ook donkertema}other{{mode_1}, {mode_2} en nog # aktiveer ook donkertema}}"</string>
+    <string name="dark_ui_modes_footer_action" msgid="80671811848446248">"Modusinstellings"</string>
     <string name="even_dimmer_display_title" msgid="6731255736830410149">"Nog dowwer"</string>
     <string name="even_dimmer_display_summary" msgid="120301078873242172">"Laat toestel toe om dowwer as gewoonlik te word"</string>
     <string name="screen_timeout" msgid="7709947617767439410">"Skermuitteltyd"</string>
@@ -1960,10 +1980,14 @@
     <skip />
     <string name="pointer_fill_style_black_button" msgid="4540815366995820960">"Verander wyserinvulstyl na swart"</string>
     <string name="pointer_fill_style_green_button" msgid="3731413496528067979">"Verander wyserinvulstyl na groen"</string>
-    <string name="pointer_fill_style_yellow_button" msgid="5025969961559379024">"Verander wyserinvulstyl na geel"</string>
+    <!-- no translation found for pointer_fill_style_red_button (6424326623906159283) -->
+    <skip />
     <string name="pointer_fill_style_pink_button" msgid="4106218142489635673">"Verander wyserinvulstyl na pienk"</string>
     <string name="pointer_fill_style_blue_button" msgid="5594958078854032785">"Verander wyserinvulstyl na blou"</string>
-    <string name="pointer_stroke_style" msgid="1886986630216050665">"Styl van wyser se haal"</string>
+    <!-- no translation found for pointer_fill_style_purple_button (3713175300139801778) -->
+    <skip />
+    <!-- no translation found for pointer_stroke_style (139962661485972329) -->
+    <skip />
     <string name="pointer_stroke_style_name_white" msgid="673686194443825383">"Wit"</string>
     <string name="pointer_stroke_style_name_black" msgid="4655806167067437330">"Swart"</string>
     <string name="pointer_stroke_style_name_none" msgid="8953927511729800247">"Geen"</string>
@@ -2245,8 +2269,7 @@
     <string name="accessibility_button_opacity_title" msgid="4727355657530362289">"Deursigtigheid wanneer nie gebruik word nie"</string>
     <string name="accessibility_button_low_label" msgid="4193015407828927741">"Deursigtig"</string>
     <string name="accessibility_button_high_label" msgid="9138077512008190896">"Ondeursigtig"</string>
-    <!-- no translation found for accessibility_button_disabled_button_mode_summary (1978174613270619492) -->
-    <skip />
+    <string name="accessibility_button_disabled_button_mode_summary" msgid="1978174613270619492">"Onbeskikbaar met navigasiebalk-knoppiemodus."</string>
     <string name="accessibility_toggle_high_text_contrast_preference_title" msgid="1830189632458752698">"Hoëkontrasteks"</string>
     <string name="accessibility_toggle_high_text_contrast_preference_summary" msgid="5286411556836346180">"Verander tekskleur na swart of wit. Vergroot kontras met die agtergrond."</string>
     <string name="accessibility_toggle_maximize_text_contrast_preference_title" msgid="8737272017343509753">"Maksimeer tekskontras"</string>
@@ -3320,7 +3343,10 @@
     <string name="keywords_always_show_time_info" msgid="1066752498285497595">"altyd-aan-stemmingsaansig, AOD"</string>
     <string name="keywords_change_nfc_tag_apps_state" msgid="9032287964590554366">"nfc, merker, leser"</string>
     <string name="keywords_keyboard_vibration" msgid="6485149510591654697">"sleutelbord, tasbare terugvoer, vibreer,"</string>
-    <string name="sound_dashboard_summary" msgid="6574444810552643312">"Volume, vibrasie, Moenie Steur Nie"</string>
+    <!-- no translation found for sound_dashboard_summary (8254699132423665654) -->
+    <skip />
+    <!-- no translation found for sound_dashboard_summary_with_dnd (731956092218394657) -->
+    <skip />
     <string name="media_volume_option_title" msgid="5966569685119475630">"Mediavolume"</string>
     <string name="remote_media_volume_option_title" msgid="8760846743943305764">"Uitsaaivolume"</string>
     <string name="call_volume_option_title" msgid="1461105986437268924">"Oproepvolume"</string>
@@ -3421,7 +3447,7 @@
     <string name="mode_device_effects_title" msgid="6019908499525166737">"Nog instellings"</string>
     <string name="modes_sound_summary_off" msgid="6972648204528227879">"{count,plural, =0{Af}=1{Af / 1 modus kan automaties aanskakel}other{Af / # modusse kan automaties aanskakel}}"</string>
     <string name="mode_display_settings_title" msgid="8132825978346535472">"Vertooninstellings"</string>
-    <string name="mode_display_options_section" msgid="5151597748243866532">"Vertoon opsies"</string>
+    <string name="mode_display_options_section" msgid="5151597748243866532">"Vertoonopsies"</string>
     <string name="mode_grayscale_title" msgid="6027553257331235461">"Grysskaal"</string>
     <string name="mode_grayscale_title_secondary_list" msgid="2662593380253642581">"grysskaal"</string>
     <string name="mode_grayscale_summary" msgid="6682099523626777038">"Verander die skerm na swart en wit"</string>
@@ -3684,7 +3710,7 @@
     <string name="notif_listener_not_migrated" msgid="6265206376374278226">"Hierdie program steun nie verbeterde instellings nie"</string>
     <string name="notif_listener_more_settings" msgid="1348409392307208921">"Meer instellings"</string>
     <string name="notif_listener_more_settings_desc" msgid="7995492074281663658">"Meer instellings is binne hierdie app beskikbaar"</string>
-    <string name="notification_polite_title" msgid="6121016426991791557">"Kennisgewingbedaring"</string>
+    <string name="notification_polite_title" msgid="6121016426991791557">"Kennisgewingdemping"</string>
     <string name="notification_polite_main_control_title" msgid="5812529809151927149">"Gebruik kennisgewingdemping"</string>
     <string name="notification_polite_description" msgid="5497748284893832854">"Wanneer jy binne ’n kort tydperk baie kennisgewings kry, sal jou toestel vir tot 2 minute die volume sagter stel en waarskuwings minimeer. Oproepe, wekkers en prioriteitgesprekke word nie geraak nie. \n\nKennisgewings wat jy tydens demping kry, kan gekry word deur van die bokant van die skerm af te trek."</string>
     <string name="notification_polite_work" msgid="8823596456640216391">"Pas toe op werkprofiele"</string>
@@ -4784,7 +4810,8 @@
     <string name="mobile_network_mode_error" msgid="9222056129897416074">"Ongeldige netwerkmodus <xliff:g id="NETWORKMODEID">%1$d</xliff:g>. Ignoreer."</string>
     <string name="satellite_setting_title" msgid="2543034229989047673">"Satellietboodskappe"</string>
     <string name="satellite_setting_enabled_summary" msgid="3554127722727530845">"Stuur en ontvang teksboodskappe via satelliet. Ingesluit by jou rekening."</string>
-    <string name="satellite_setting_disabled_summary" msgid="6789122487534159857">"Stuur en ontvang teksboodskappe via satelliet. Nie by jou rekening ingesluit nie."</string>
+    <!-- no translation found for satellite_setting_disabled_summary (8428393986403708690) -->
+    <skip />
     <string name="keywords_satellite_setting" msgid="3312183289776517695">"Satellietboodskappe"</string>
     <string name="category_name_about_satellite_messaging" msgid="3756205049485508340">"Meer oor satellietboodskappe"</string>
     <string name="title_about_satellite_setting" msgid="9212860038048311345">"Jy kan as deel van ’n kwalifiserende <xliff:g id="CARRIER_NAME">%1$s</xliff:g>-rekening teksboodskappe via satelliet stuur en ontvang."</string>
@@ -5303,10 +5330,8 @@
     <string name="show_captions_enabled" msgid="7089043007924626">"Aan"</string>
     <string name="live_caption_disabled" msgid="3562035026547887366">"Af"</string>
     <string name="live_caption_enabled" msgid="5269360946200718949">"Aan"</string>
-    <!-- no translation found for audio_seek_bar_state_left_first (1641359989891833888) -->
-    <skip />
-    <!-- no translation found for audio_seek_bar_state_right_first (6027686565598201061) -->
-    <skip />
+    <string name="audio_seek_bar_state_left_first" msgid="1641359989891833888">"Klank <xliff:g id="PERCENT_LEFT">%1$s</xliff:g> links, <xliff:g id="PERCENT_RIGHT">%2$s</xliff:g> regs"</string>
+    <string name="audio_seek_bar_state_right_first" msgid="6027686565598201061">"Klank <xliff:g id="PERCENT_RIGHT">%1$s</xliff:g> regs, <xliff:g id="PERCENT_LEFT">%2$s</xliff:g> links"</string>
     <string name="about_phone_device_name_warning" msgid="3243226572404472381">"Jou toestelnaam is sigbaar vir apps wat jy geïnstalleer het. Ander mense sal dit dalk ook kan sien as jy aan Bluetooth-toestelle koppel, aan ’n wi-fi-netwerk koppel, of ’n wi-fi-warmkol opstel."</string>
     <string name="grammatical_gender_title" msgid="8584242850477270828">"Grammatikale geslag"</string>
     <string name="grammatical_gender_dialog_title" msgid="8754048592099871587">"Kies grammatikale geslag"</string>
@@ -5402,6 +5427,8 @@
     <string name="audio_streams_dialog_learn_more" msgid="6711241053442211345">"Meer inligting"</string>
     <string name="audio_streams_dialog_cannot_play" msgid="1358828316927479091">"Kan nie hierdie oudiostroom op <xliff:g id="DEVICE_NAME">%1$s</xliff:g> speel nie."</string>
     <string name="audio_streams_listening_now" msgid="4205614429222949176">"Luister nou"</string>
+    <!-- no translation found for audio_streams_present_now (1128360774541089402) -->
+    <skip />
     <string name="audio_streams_media_service_notification_leave_broadcast_text" msgid="4938656134300913647">"Hou op luister"</string>
     <string name="audio_streams_dialog_no_le_device_title" msgid="3931163990976742282">"Koppel versoenbare oorfone"</string>
     <string name="audio_streams_dialog_no_le_device_button" msgid="4484355549428642588">"Koppel ’n toestel"</string>
