--- a/res/values-ca/strings.xml
+++ b/res/values-ca/strings.xml
@@ -412,6 +412,28 @@
     <string name="security_settings_fingerprint_single_face_watch_preference_summary" msgid="764951912234638192">"Cara, empremta digital i <xliff:g id="WATCH">%s</xliff:g> afegits"</string>
     <string name="security_settings_fingerprint_multiple_face_watch_preference_summary" msgid="3935500711366489380">"Empremtes digitals, cara i <xliff:g id="WATCH">%s</xliff:g> afegits"</string>
     <string name="mandatory_biometrics_prompt_description" msgid="6790144699440050735">"La comprovació d\'identitat està activada i requereix una biometria"</string>
+    <!-- no translation found for go_to_settings (4394928396153474179) -->
+    <skip />
+    <!-- no translation found for identity_check_lockout_error_title (7486409651908283892) -->
+    <skip />
+    <!-- no translation found for identity_check_lockout_error_description_1 (4882147327291296884) -->
+    <skip />
+    <!-- no translation found for identity_check_lockout_error_two_factor_auth_description_1 (8369894114882274736) -->
+    <skip />
+    <!-- no translation found for identity_check_lockout_error_description_2 (5512321457771307067) -->
+    <skip />
+    <!-- no translation found for identity_check_general_error_title (5073929400896102674) -->
+    <skip />
+    <!-- no translation found for identity_check_general_error_description_1 (5260846996256699095) -->
+    <skip />
+    <!-- no translation found for identity_check_biometric_error_cancel (3353689146211669291) -->
+    <skip />
+    <!-- no translation found for identity_check_biometric_error_ok (4535306787363107304) -->
+    <skip />
+    <!-- no translation found for go_to_identity_check (5215846637575231800) -->
+    <skip />
+    <!-- no translation found for identity_check_lockout_error_lock_screen (3021787511681444051) -->
+    <skip />
     <string name="security_settings_remoteauth_preference_title" msgid="8319680328086089533">"Desbloqueig de Remote Authenticator"</string>
     <string name="security_settings_remoteauth_preference_summary" msgid="1507004469316635196">"Rellotge afegit"</string>
     <string name="security_settings_remoteauth_enroll_introduction_title" msgid="2151004795778999671">"Configura el rellotge"</string>
@@ -796,6 +818,8 @@
     <string name="lockpassword_password_requires_nonnumerical" msgid="389687423482993365">"{count,plural, =1{Ha de contenir com a mínim 1 caràcter que no sigui un número}other{Ha de contenir com a mínim # caràcters que no siguin números}}"</string>
     <string name="lockpassword_password_recently_used" msgid="5341218079730167191">"L\'administrador del dispositiu no permet que s\'utilitzi una contrasenya recent"</string>
     <string name="lockpassword_pin_no_sequential_digits" msgid="5843639256988031272">"No es permeten les seqüències de dígits ascendents, descendents o repetits"</string>
+    <!-- no translation found for lockpassword_password_no_sequential_characters (2191567105898075606) -->
+    <skip />
     <string name="lockpassword_confirm_label" msgid="560897521093566777">"Confirma"</string>
     <string name="lockpassword_clear_label" msgid="311359833434539894">"Esborra"</string>
     <string name="lockpassword_credential_changed" msgid="5934778179732392028">"El bloqueig de pantalla ja s\'ha canviat. Torna-ho a provar amb el bloqueig de pantalla nou."</string>
@@ -1956,10 +1980,14 @@
     <skip />
     <string name="pointer_fill_style_black_button" msgid="4540815366995820960">"Canvia emplenament del punter a negre"</string>
     <string name="pointer_fill_style_green_button" msgid="3731413496528067979">"Canvia emplenament del punter a verd"</string>
-    <string name="pointer_fill_style_yellow_button" msgid="5025969961559379024">"Canvia emplenament del punter a groc"</string>
+    <!-- no translation found for pointer_fill_style_red_button (6424326623906159283) -->
+    <skip />
     <string name="pointer_fill_style_pink_button" msgid="4106218142489635673">"Canvia emplenament del punter a rosa"</string>
     <string name="pointer_fill_style_blue_button" msgid="5594958078854032785">"Canvia emplenament del punter a blau"</string>
-    <string name="pointer_stroke_style" msgid="1886986630216050665">"Estil de traç de punter"</string>
+    <!-- no translation found for pointer_fill_style_purple_button (3713175300139801778) -->
+    <skip />
+    <!-- no translation found for pointer_stroke_style (139962661485972329) -->
+    <skip />
     <string name="pointer_stroke_style_name_white" msgid="673686194443825383">"Blanc"</string>
     <string name="pointer_stroke_style_name_black" msgid="4655806167067437330">"Negre"</string>
     <string name="pointer_stroke_style_name_none" msgid="8953927511729800247">"Cap"</string>
@@ -3315,7 +3343,10 @@
     <string name="keywords_always_show_time_info" msgid="1066752498285497595">"pantalla ambient sempre activa, AOD"</string>
     <string name="keywords_change_nfc_tag_apps_state" msgid="9032287964590554366">"nfc, etiqueta, lector"</string>
     <string name="keywords_keyboard_vibration" msgid="6485149510591654697">"teclat, tecnologia hàptica, vibració,"</string>
-    <string name="sound_dashboard_summary" msgid="6574444810552643312">"Volum, vibració, No molestis"</string>
+    <!-- no translation found for sound_dashboard_summary (8254699132423665654) -->
+    <skip />
+    <!-- no translation found for sound_dashboard_summary_with_dnd (731956092218394657) -->
+    <skip />
     <string name="media_volume_option_title" msgid="5966569685119475630">"Volum de multimèdia"</string>
     <string name="remote_media_volume_option_title" msgid="8760846743943305764">"Volum emès"</string>
     <string name="call_volume_option_title" msgid="1461105986437268924">"Volum de trucada"</string>
@@ -3415,8 +3446,8 @@
     <string name="mode_interruption_filter_title" msgid="6293843948349239256">"Filtres de notificacions"</string>
     <string name="mode_device_effects_title" msgid="6019908499525166737">"Més opcions"</string>
     <string name="modes_sound_summary_off" msgid="6972648204528227879">"{count,plural, =0{Desactivat}=1{Desactivat / Es pot activar automàticament 1 mode}other{Desactivat / Es poden activar automàticament # modes}}"</string>
-    <string name="mode_display_settings_title" msgid="8132825978346535472">"Configuració de la pantalla"</string>
-    <string name="mode_display_options_section" msgid="5151597748243866532">"Opcions de pantalla"</string>
+    <string name="mode_display_settings_title" msgid="8132825978346535472">"Configuració de visualització"</string>
+    <string name="mode_display_options_section" msgid="5151597748243866532">"Opcions de visualització"</string>
     <string name="mode_grayscale_title" msgid="6027553257331235461">"Escala de grisos"</string>
     <string name="mode_grayscale_title_secondary_list" msgid="2662593380253642581">"escala de grisos"</string>
     <string name="mode_grayscale_summary" msgid="6682099523626777038">"Canvia el color de la pantalla a blanc i negre"</string>
@@ -3874,8 +3905,8 @@
     <skip />
     <string name="zen_mode_calls_summary_two" msgid="6351563496898410742">"<xliff:g id="CALLER_TYPE_0">%1$s</xliff:g> i <xliff:g id="CALLER_TYPE_1">%2$s</xliff:g>"</string>
     <string name="zen_mode_repeat_callers_summary" msgid="4121054819936083025">"Si una mateixa persona truca dues vegades en menys de <xliff:g id="MINUTES">%d</xliff:g> minuts"</string>
-    <string name="zen_mode_start_time" msgid="1252665038977523332">"Hora d\'inici"</string>
-    <string name="zen_mode_end_time" msgid="223502560367331706">"Hora de finalització"</string>
+    <string name="zen_mode_start_time" msgid="1252665038977523332">"Inici"</string>
+    <string name="zen_mode_end_time" msgid="223502560367331706">"Final"</string>
     <string name="zen_mode_end_time_next_day_summary_format" msgid="419683704068360804">"L\'endemà a les <xliff:g id="FORMATTED_TIME">%s</xliff:g>"</string>
     <string name="zen_mode_summary_alarms_only_indefinite" msgid="910047326128154945">"Canvia al mode Només alarmes indefinidament"</string>
     <string name="zen_mode_summary_alarms_only_by_minute" msgid="6673649005494939311">"{count,plural, =1{Canvia al mode Només alarmes durant 1 minut fins a les {time}}other{Canvia al mode Només alarmes durant # minuts (fins a les {time})}}"</string>
@@ -4779,7 +4810,8 @@
     <string name="mobile_network_mode_error" msgid="9222056129897416074">"El mode de xarxa <xliff:g id="NETWORKMODEID">%1$d</xliff:g> no és vàlid. Ignora."</string>
     <string name="satellite_setting_title" msgid="2543034229989047673">"Missatges per satèl·lit"</string>
     <string name="satellite_setting_enabled_summary" msgid="3554127722727530845">"Envia i rep missatges de text per satèl·lit. S\'inclou amb el teu compte."</string>
-    <string name="satellite_setting_disabled_summary" msgid="6789122487534159857">"Envia i rep missatges de text per satèl·lit. No s\'inclou amb el teu compte."</string>
+    <!-- no translation found for satellite_setting_disabled_summary (8428393986403708690) -->
+    <skip />
     <string name="keywords_satellite_setting" msgid="3312183289776517695">"Missatges per satèl·lit"</string>
     <string name="category_name_about_satellite_messaging" msgid="3756205049485508340">"Sobre els missatges per satèl·lit"</string>
     <string name="title_about_satellite_setting" msgid="9212860038048311345">"Pots enviar i rebre missatges de text per satèl·lit com a part d\'un compte de <xliff:g id="CARRIER_NAME">%1$s</xliff:g> apte"</string>
@@ -5298,10 +5330,8 @@
     <string name="show_captions_enabled" msgid="7089043007924626">"Activat"</string>
     <string name="live_caption_disabled" msgid="3562035026547887366">"Desactivat"</string>
     <string name="live_caption_enabled" msgid="5269360946200718949">"Activat"</string>
-    <!-- no translation found for audio_seek_bar_state_left_first (1641359989891833888) -->
-    <skip />
-    <!-- no translation found for audio_seek_bar_state_right_first (6027686565598201061) -->
-    <skip />
+    <string name="audio_seek_bar_state_left_first" msgid="1641359989891833888">"Àudio: <xliff:g id="PERCENT_LEFT">%1$s</xliff:g> a l\'esquerra i <xliff:g id="PERCENT_RIGHT">%2$s</xliff:g> a la dreta"</string>
+    <string name="audio_seek_bar_state_right_first" msgid="6027686565598201061">"Àudio: <xliff:g id="PERCENT_RIGHT">%1$s</xliff:g> a la dreta i <xliff:g id="PERCENT_LEFT">%2$s</xliff:g> a l\'esquerra"</string>
     <string name="about_phone_device_name_warning" msgid="3243226572404472381">"El nom del dispositiu és visible per a les aplicacions que has instal·lat. També el poden veure altres persones si el connectes a un dispositiu Bluetooth o a una xarxa Wi‑Fi, o si configures un punt d\'accés Wi‑Fi."</string>
     <string name="grammatical_gender_title" msgid="8584242850477270828">"Gènere gramatical"</string>
     <string name="grammatical_gender_dialog_title" msgid="8754048592099871587">"Selecciona el gènere gramatical"</string>
@@ -5397,6 +5427,8 @@
     <string name="audio_streams_dialog_learn_more" msgid="6711241053442211345">"Més informació"</string>
     <string name="audio_streams_dialog_cannot_play" msgid="1358828316927479091">"No es pot reproduir aquest flux d\'àudio a <xliff:g id="DEVICE_NAME">%1$s</xliff:g>."</string>
     <string name="audio_streams_listening_now" msgid="4205614429222949176">"S\'està escoltant ara"</string>
+    <!-- no translation found for audio_streams_present_now (1128360774541089402) -->
+    <skip />
     <string name="audio_streams_media_service_notification_leave_broadcast_text" msgid="4938656134300913647">"Atura l\'escolta"</string>
     <string name="audio_streams_dialog_no_le_device_title" msgid="3931163990976742282">"Connecta auriculars compatibles"</string>
     <string name="audio_streams_dialog_no_le_device_button" msgid="4484355549428642588">"Connecta un dispositiu"</string>
