--- a/res/values-fi/strings.xml
+++ b/res/values-fi/strings.xml
@@ -412,6 +412,28 @@
     <string name="security_settings_fingerprint_single_face_watch_preference_summary" msgid="764951912234638192">"Kasvot, sormenjälki ja <xliff:g id="WATCH">%s</xliff:g> lisätty"</string>
     <string name="security_settings_fingerprint_multiple_face_watch_preference_summary" msgid="3935500711366489380">"Kasvot, sormenjäljet ja <xliff:g id="WATCH">%s</xliff:g> lisätty"</string>
     <string name="mandatory_biometrics_prompt_description" msgid="6790144699440050735">"Henkilöllisyyden tunnistaminen on päällä ja edellyttää biometristä tunnistetta"</string>
+    <!-- no translation found for go_to_settings (4394928396153474179) -->
+    <skip />
+    <!-- no translation found for identity_check_lockout_error_title (7486409651908283892) -->
+    <skip />
+    <!-- no translation found for identity_check_lockout_error_description_1 (4882147327291296884) -->
+    <skip />
+    <!-- no translation found for identity_check_lockout_error_two_factor_auth_description_1 (8369894114882274736) -->
+    <skip />
+    <!-- no translation found for identity_check_lockout_error_description_2 (5512321457771307067) -->
+    <skip />
+    <!-- no translation found for identity_check_general_error_title (5073929400896102674) -->
+    <skip />
+    <!-- no translation found for identity_check_general_error_description_1 (5260846996256699095) -->
+    <skip />
+    <!-- no translation found for identity_check_biometric_error_cancel (3353689146211669291) -->
+    <skip />
+    <!-- no translation found for identity_check_biometric_error_ok (4535306787363107304) -->
+    <skip />
+    <!-- no translation found for go_to_identity_check (5215846637575231800) -->
+    <skip />
+    <!-- no translation found for identity_check_lockout_error_lock_screen (3021787511681444051) -->
+    <skip />
     <string name="security_settings_remoteauth_preference_title" msgid="8319680328086089533">"Remote Authenticatorin lukituksen avaus"</string>
     <string name="security_settings_remoteauth_preference_summary" msgid="1507004469316635196">"Kello lisätty"</string>
     <string name="security_settings_remoteauth_enroll_introduction_title" msgid="2151004795778999671">"Kellon käyttöönotto"</string>
@@ -796,6 +818,8 @@
     <string name="lockpassword_password_requires_nonnumerical" msgid="389687423482993365">"{count,plural, =1{Salasanassa on oltava vähintään 1 merkki, joka ei ole numero}other{Salasanassa on oltava vähintään # merkkiä, jotka eivät ole numeroita}}"</string>
     <string name="lockpassword_password_recently_used" msgid="5341218079730167191">"Järjestelmänvalvoja esti salasanan, koska sitä on käytetty hiljattain."</string>
     <string name="lockpassword_pin_no_sequential_digits" msgid="5843639256988031272">"Nousevat, laskevat tai toistuvat numerosarjat on kielletty."</string>
+    <!-- no translation found for lockpassword_password_no_sequential_characters (2191567105898075606) -->
+    <skip />
     <string name="lockpassword_confirm_label" msgid="560897521093566777">"Vahvista"</string>
     <string name="lockpassword_clear_label" msgid="311359833434539894">"Tyhjennä"</string>
     <string name="lockpassword_credential_changed" msgid="5934778179732392028">"Näytön lukitus on jo vaihdettu. Yritä uudelleen uudella lukituksella."</string>
@@ -1277,21 +1301,17 @@
     <string name="dark_ui_summary_off_auto_mode_auto" msgid="6766831395970887213">"Käynnistyy automaattisesti, kun aurinko laskee"</string>
     <string name="dark_ui_summary_off_auto_mode_custom" msgid="1345906088326708376">"Menee automaattisesti päälle kello <xliff:g id="ID_1">%1$s</xliff:g>"</string>
     <string name="dark_ui_summary_off_auto_mode_custom_bedtime" msgid="7759826673214624622">"Menee automaattisesti päälle nukkuma-ajan alkaessa"</string>
-    <!-- no translation found for dark_ui_summary_off_auto_mode_modes (2672694802103388896) -->
-    <skip />
+    <string name="dark_ui_summary_off_auto_mode_modes" msgid="2672694802103388896">"Laitetaan päälle, kun <xliff:g id="ID_1">%1$s</xliff:g> alkaa"</string>
     <string name="dark_ui_summary_on_auto_mode_never" msgid="2468597062391435521">"Ei sammu automaattisesti"</string>
     <string name="dark_ui_summary_on_auto_mode_auto" msgid="5553376115092648636">"Sammuu automaattisesti, kun aurinko nousee"</string>
     <string name="dark_ui_summary_on_auto_mode_custom" msgid="2526935680241734784">"Menee automaattisesti pois päältä kello <xliff:g id="ID_1">%1$s</xliff:g>"</string>
     <string name="dark_ui_summary_on_auto_mode_custom_bedtime" msgid="1976993025762551246">"Menee automaattisesti pois päältä nukkuma-ajan päätyttyä"</string>
-    <!-- no translation found for dark_ui_summary_on_auto_mode_modes (7769594183411785087) -->
-    <skip />
+    <string name="dark_ui_summary_on_auto_mode_modes" msgid="7769594183411785087">"Laitetaan pois päältä, kun <xliff:g id="ID_1">%1$s</xliff:g> päättyy"</string>
     <string name="dark_ui_text" msgid="4392646155331126666">"Tumman teeman musta tausta auttaa pidentämään akunkestoa joillain näytöillä. Tumman teeman aikataulut otetaan käyttöön vasta, kun näyttö on sammutettu."</string>
     <string name="dark_ui_bedtime_footer_summary" msgid="5576501833145170581">"Tumma teema toimii nyt nukkuma-aikamoodisi aikataulun mukaan"</string>
     <string name="dark_ui_bedtime_footer_action" msgid="1493095487994054339">"Nukkuma-aikamoodin asetukset"</string>
-    <!-- no translation found for dark_ui_modes_footer_summary (1041117250408363391) -->
-    <skip />
-    <!-- no translation found for dark_ui_modes_footer_action (80671811848446248) -->
-    <skip />
+    <string name="dark_ui_modes_footer_summary" msgid="1041117250408363391">"{count,plural,offset:2 =0{Tiloilla voi myös aktivoida tumman teeman}=1{{mode_1} aktivoi myös tumman teeman}=2{{mode_1} ja {mode_2} aktivoivat myös tumman teeman}=3{{mode_1}, {mode_2} ja {mode_3} aktivoivat myös tumman teeman}other{{mode_1}, {mode_2} ja # muuta aktivoi myös tumman teeman}}"</string>
+    <string name="dark_ui_modes_footer_action" msgid="80671811848446248">"Tilojen asetukset"</string>
     <string name="even_dimmer_display_title" msgid="6731255736830410149">"Vielä himmeämpi"</string>
     <string name="even_dimmer_display_summary" msgid="120301078873242172">"Salli että laite on tavallista himmeämpi"</string>
     <string name="screen_timeout" msgid="7709947617767439410">"Näytön aikakatkaisu"</string>
@@ -1960,10 +1980,14 @@
     <skip />
     <string name="pointer_fill_style_black_button" msgid="4540815366995820960">"Musta osoittimen täytön tyyli"</string>
     <string name="pointer_fill_style_green_button" msgid="3731413496528067979">"Vihreä osoittimen täytön tyyli"</string>
-    <string name="pointer_fill_style_yellow_button" msgid="5025969961559379024">"Keltainen osoittimen täytön tyyli"</string>
+    <!-- no translation found for pointer_fill_style_red_button (6424326623906159283) -->
+    <skip />
     <string name="pointer_fill_style_pink_button" msgid="4106218142489635673">"Pinkki osoittimen täytön tyyli"</string>
     <string name="pointer_fill_style_blue_button" msgid="5594958078854032785">"Sininen osoittimen täytön tyyli"</string>
-    <string name="pointer_stroke_style" msgid="1886986630216050665">"Osoittimen viivauksen tyyli"</string>
+    <!-- no translation found for pointer_fill_style_purple_button (3713175300139801778) -->
+    <skip />
+    <!-- no translation found for pointer_stroke_style (139962661485972329) -->
+    <skip />
     <string name="pointer_stroke_style_name_white" msgid="673686194443825383">"Valkoinen"</string>
     <string name="pointer_stroke_style_name_black" msgid="4655806167067437330">"Musta"</string>
     <string name="pointer_stroke_style_name_none" msgid="8953927511729800247">"Ei mitään"</string>
@@ -2245,8 +2269,7 @@
     <string name="accessibility_button_opacity_title" msgid="4727355657530362289">"Läpinäkyvyys kun ei käytössä"</string>
     <string name="accessibility_button_low_label" msgid="4193015407828927741">"Läpinäkyvä"</string>
     <string name="accessibility_button_high_label" msgid="9138077512008190896">"Läpinäkymätön"</string>
-    <!-- no translation found for accessibility_button_disabled_button_mode_summary (1978174613270619492) -->
-    <skip />
+    <string name="accessibility_button_disabled_button_mode_summary" msgid="1978174613270619492">"Ei käytettävissä (painiketila)"</string>
     <string name="accessibility_toggle_high_text_contrast_preference_title" msgid="1830189632458752698">"Suurikontrastinen teksti"</string>
     <string name="accessibility_toggle_high_text_contrast_preference_summary" msgid="5286411556836346180">"Muuta tekstin väri mustaksi tai valkoiseksi. Maksimoi kontrastin taustan kanssa."</string>
     <string name="accessibility_toggle_maximize_text_contrast_preference_title" msgid="8737272017343509753">"Suurin tekstikontrasti"</string>
@@ -3320,7 +3343,10 @@
     <string name="keywords_always_show_time_info" msgid="1066752498285497595">"aina päällä oleva näyttö, AOD"</string>
     <string name="keywords_change_nfc_tag_apps_state" msgid="9032287964590554366">"nfc, tagi, lukija"</string>
     <string name="keywords_keyboard_vibration" msgid="6485149510591654697">"näppäimistö, haptinen teknologia, värinä,"</string>
-    <string name="sound_dashboard_summary" msgid="6574444810552643312">"Äänenvoimakkuus, värinä, Älä häiritse"</string>
+    <!-- no translation found for sound_dashboard_summary (8254699132423665654) -->
+    <skip />
+    <!-- no translation found for sound_dashboard_summary_with_dnd (731956092218394657) -->
+    <skip />
     <string name="media_volume_option_title" msgid="5966569685119475630">"Median äänenvoimakkuus"</string>
     <string name="remote_media_volume_option_title" msgid="8760846743943305764">"Suoratoiston äänenvoimakkuus"</string>
     <string name="call_volume_option_title" msgid="1461105986437268924">"Puhelun äänenvoimakkuus"</string>
@@ -3382,7 +3408,7 @@
     <string name="zen_mode_active_text" msgid="5002406772481439437">"PÄÄLLÄ"</string>
     <string name="zen_mode_disabled_needs_setup" msgid="389269759040103728">"Ei asetettu"</string>
     <string name="zen_mode_disabled_by_user" msgid="138592173630683253">"Ei käytössä"</string>
-    <string name="zen_mode_new_title" msgid="4934720193004330740">"Tilan luominen"</string>
+    <string name="zen_mode_new_title" msgid="4934720193004330740">"Luo tila"</string>
     <string name="zen_mode_new_option_custom" msgid="1060993879440003341">"Oma"</string>
     <string name="zen_mode_action_activate" msgid="4832626715234966484">"Laita päälle nyt"</string>
     <string name="zen_mode_action_deactivate" msgid="5922468877447186921">"Laita pois päältä"</string>
@@ -3493,7 +3519,7 @@
     <string name="zen_category_behavior" msgid="3214056473947178507">"Mikä voi keskeyttää Älä häiritse ‑tilan"</string>
     <string name="zen_category_people" msgid="8252926021894933047">"Ihmiset"</string>
     <string name="zen_category_apps" msgid="1167374545618451925">"Sovellukset"</string>
-    <string name="zen_category_exceptions" msgid="1316097981052752811">"Hälytykset ja muut keskeytykset"</string>
+    <string name="zen_category_exceptions" msgid="1316097981052752811">"Herätykset ja muut keskeytykset"</string>
     <string name="zen_category_schedule" msgid="2003707171924226212">"Aikataulut"</string>
     <string name="zen_category_duration" msgid="7515850842082631460">"Pika-asetusten kesto"</string>
     <string name="zen_settings_general" msgid="2704932194620124153">"Yleiset"</string>
@@ -3824,8 +3850,8 @@
     <string name="zen_mode_none_messages" msgid="1386626352943268342">"–"</string>
     <string name="zen_mode_alarms" msgid="5989343060100771099">"Hälytykset"</string>
     <string name="zen_mode_alarms_summary" msgid="3388679177457223967">"Ajastimista, hälytyksistä, turvajärjestelmistä ja muista sovelluksista"</string>
-    <string name="zen_mode_alarms_list" msgid="334782233067365405">"hälytykset"</string>
-    <string name="zen_mode_alarms_list_first" msgid="2780418316613576610">"Hälytykset"</string>
+    <string name="zen_mode_alarms_list" msgid="334782233067365405">"herätykset"</string>
+    <string name="zen_mode_alarms_list_first" msgid="2780418316613576610">"Herätykset"</string>
     <string name="zen_mode_media" msgid="885017672250984735">"Median äänet"</string>
     <string name="zen_mode_media_summary" msgid="7174081803853351461">"Videoiden, pelien ja muiden medioiden äänet"</string>
     <string name="zen_mode_media_list" msgid="2006413476596092020">"media"</string>
@@ -3887,7 +3913,7 @@
     <string name="zen_mode_summary_alarms_only_by_hour" msgid="7400910210950788163">"{count,plural, =1{Muuta hälytyksiä tunnilla tähän asti: {time}}other{Muuta hälytyksiä # tunnilla tähän asti: {time}}}"</string>
     <string name="zen_mode_summary_alarms_only_by_time" msgid="8140619669703968810">"Ota vain herätykset käyttöön kello <xliff:g id="FORMATTEDTIME">%1$s</xliff:g> asti."</string>
     <string name="zen_mode_summary_always" msgid="722093064250082317">"Salli keskeytykset aina."</string>
-    <string name="zen_mode_rename_title" msgid="8146882272966214558">"Muokkaustila"</string>
+    <string name="zen_mode_rename_title" msgid="8146882272966214558">"Muokkaa tilaa"</string>
     <string name="zen_mode_new_custom_title" msgid="7513785385574267851">"Luo tila"</string>
     <string name="zen_mode_new_custom_default_name" msgid="2778307946775085105">"Oma tila"</string>
     <string name="zen_mode_edit_name_hint" msgid="4584652062167540536">"Tilan nimi"</string>
@@ -4784,7 +4810,8 @@
     <string name="mobile_network_mode_error" msgid="9222056129897416074">"Virheellinen verkkotila <xliff:g id="NETWORKMODEID">%1$d</xliff:g>. Ohita."</string>
     <string name="satellite_setting_title" msgid="2543034229989047673">"Satelliittiviestintä"</string>
     <string name="satellite_setting_enabled_summary" msgid="3554127722727530845">"Lähetä ja vastaanota tekstiviestejä satelliitin kautta. Sisältyy tiliin."</string>
-    <string name="satellite_setting_disabled_summary" msgid="6789122487534159857">"Lähetä ja vastaanota tekstiviestejä satelliitin kautta. Ei sisälly tiliin."</string>
+    <!-- no translation found for satellite_setting_disabled_summary (8428393986403708690) -->
+    <skip />
     <string name="keywords_satellite_setting" msgid="3312183289776517695">"Satelliittiviestintä"</string>
     <string name="category_name_about_satellite_messaging" msgid="3756205049485508340">"Tietoa satelliittiviestinnästä"</string>
     <string name="title_about_satellite_setting" msgid="9212860038048311345">"Voit lähettää ja vastaanottaa tekstiviestejä satelliitin kautta osana ehdot täyttävää <xliff:g id="CARRIER_NAME">%1$s</xliff:g> ‑tiliä"</string>
@@ -5303,10 +5330,8 @@
     <string name="show_captions_enabled" msgid="7089043007924626">"Päällä"</string>
     <string name="live_caption_disabled" msgid="3562035026547887366">"Pois päältä"</string>
     <string name="live_caption_enabled" msgid="5269360946200718949">"Päällä"</string>
-    <!-- no translation found for audio_seek_bar_state_left_first (1641359989891833888) -->
-    <skip />
-    <!-- no translation found for audio_seek_bar_state_right_first (6027686565598201061) -->
-    <skip />
+    <string name="audio_seek_bar_state_left_first" msgid="1641359989891833888">"Audio: vasen <xliff:g id="PERCENT_LEFT">%1$s</xliff:g>, oikea <xliff:g id="PERCENT_RIGHT">%2$s</xliff:g>"</string>
+    <string name="audio_seek_bar_state_right_first" msgid="6027686565598201061">"Audio: oikea <xliff:g id="PERCENT_RIGHT">%1$s</xliff:g>, vasen <xliff:g id="PERCENT_LEFT">%2$s</xliff:g>"</string>
     <string name="about_phone_device_name_warning" msgid="3243226572404472381">"Laitteesi nimi näkyy asentamillesi sovelluksille. Myös muut käyttäjät voivat nähdä nimen, kun muodostat Bluetooth-yhteyden laitteisiin, yhteyden Wi-Fi-verkkoon tai aktivoit Wi-Fi-hotspotin."</string>
     <string name="grammatical_gender_title" msgid="8584242850477270828">"Kieliopillinen suku"</string>
     <string name="grammatical_gender_dialog_title" msgid="8754048592099871587">"Valitse kieliopillinen suku"</string>
@@ -5402,6 +5427,8 @@
     <string name="audio_streams_dialog_learn_more" msgid="6711241053442211345">"Lue lisää"</string>
     <string name="audio_streams_dialog_cannot_play" msgid="1358828316927479091">"<xliff:g id="DEVICE_NAME">%1$s</xliff:g> ei voi toistaa tätä audiostriimiä."</string>
     <string name="audio_streams_listening_now" msgid="4205614429222949176">"Kuuntelu käynnissä"</string>
+    <!-- no translation found for audio_streams_present_now (1128360774541089402) -->
+    <skip />
     <string name="audio_streams_media_service_notification_leave_broadcast_text" msgid="4938656134300913647">"Lopeta kuunteleminen"</string>
     <string name="audio_streams_dialog_no_le_device_title" msgid="3931163990976742282">"Yhdistä yhteensopivat kuulokkeet"</string>
     <string name="audio_streams_dialog_no_le_device_button" msgid="4484355549428642588">"Yhdistä laite"</string>
@@ -5421,5 +5448,5 @@
     <string name="audio_streams_main_page_password_dialog_cannot_edit" msgid="9020898619297520153">"Salasanaa ei voi muokata jakamisen aikana. Jos haluat vaihtaa salasanaa, laita ensin audionjako pois päältä."</string>
     <string name="audio_streams_qr_code_scanner_label" msgid="8799703301071378034">"QR-koodiskanneri"</string>
     <string name="audio_streams_qr_code_help_with_link" msgid="5542328067190486479"><annotation id="link">"Tarvitsetko apua?"</annotation></string>
-    <string name="homepage_search" msgid="6759334912284663559">"Hae asetuksia"</string>
+    <string name="homepage_search" msgid="6759334912284663559">"Hae asetuksista"</string>
 </resources>
