--- a/res/values-lt/strings.xml
+++ b/res/values-lt/strings.xml
@@ -412,6 +412,28 @@
     <string name="security_settings_fingerprint_single_face_watch_preference_summary" msgid="764951912234638192">"Pridėti veido, piršto atspaudo ir <xliff:g id="WATCH">%s</xliff:g> duomenys"</string>
     <string name="security_settings_fingerprint_multiple_face_watch_preference_summary" msgid="3935500711366489380">"Pridėti veido, piršto atspaudų ir <xliff:g id="WATCH">%s</xliff:g> duomenys"</string>
     <string name="mandatory_biometrics_prompt_description" msgid="6790144699440050735">"Tapatybės patikra įjungta ir reikia biometrinių duomenų"</string>
+    <!-- no translation found for go_to_settings (4394928396153474179) -->
+    <skip />
+    <!-- no translation found for identity_check_lockout_error_title (7486409651908283892) -->
+    <skip />
+    <!-- no translation found for identity_check_lockout_error_description_1 (4882147327291296884) -->
+    <skip />
+    <!-- no translation found for identity_check_lockout_error_two_factor_auth_description_1 (8369894114882274736) -->
+    <skip />
+    <!-- no translation found for identity_check_lockout_error_description_2 (5512321457771307067) -->
+    <skip />
+    <!-- no translation found for identity_check_general_error_title (5073929400896102674) -->
+    <skip />
+    <!-- no translation found for identity_check_general_error_description_1 (5260846996256699095) -->
+    <skip />
+    <!-- no translation found for identity_check_biometric_error_cancel (3353689146211669291) -->
+    <skip />
+    <!-- no translation found for identity_check_biometric_error_ok (4535306787363107304) -->
+    <skip />
+    <!-- no translation found for go_to_identity_check (5215846637575231800) -->
+    <skip />
+    <!-- no translation found for identity_check_lockout_error_lock_screen (3021787511681444051) -->
+    <skip />
     <string name="security_settings_remoteauth_preference_title" msgid="8319680328086089533">"Nuotolinės Autentifikavimo priemonės atrakinimas"</string>
     <string name="security_settings_remoteauth_preference_summary" msgid="1507004469316635196">"Laikrodis pridėtas"</string>
     <string name="security_settings_remoteauth_enroll_introduction_title" msgid="2151004795778999671">"Nustatykite laikrodį"</string>
@@ -796,6 +818,8 @@
     <string name="lockpassword_password_requires_nonnumerical" msgid="389687423482993365">"{count,plural, =1{Turi būti bent vienas neskaitinis simbolis}one{Turi būti bent # neskaitinis simbolis}few{Turi būti bent # neskaitiniai simboliai}many{Turi būti bent # neskaitinio simbolio}other{Turi būti bent # neskaitinių simbolių}}"</string>
     <string name="lockpassword_password_recently_used" msgid="5341218079730167191">"Įrenginio administratorius neleidžia naudoti pastarojo slaptažodžio"</string>
     <string name="lockpassword_pin_no_sequential_digits" msgid="5843639256988031272">"Didėjanti, mažėjanti ar pasikartojanti skaitmenų seka neleidžiama"</string>
+    <!-- no translation found for lockpassword_password_no_sequential_characters (2191567105898075606) -->
+    <skip />
     <string name="lockpassword_confirm_label" msgid="560897521093566777">"Patvirtinti"</string>
     <string name="lockpassword_clear_label" msgid="311359833434539894">"Išvalyti"</string>
     <string name="lockpassword_credential_changed" msgid="5934778179732392028">"Ekrano užraktas jau pakeistas. Bandykite dar kartą naudodami naują ekrano užraktą."</string>
@@ -1277,21 +1301,17 @@
     <string name="dark_ui_summary_off_auto_mode_auto" msgid="6766831395970887213">"Bus įjungta automatiškai saulei leidžiantis"</string>
     <string name="dark_ui_summary_off_auto_mode_custom" msgid="1345906088326708376">"Bus įjungta automatiškai <xliff:g id="ID_1">%1$s</xliff:g>"</string>
     <string name="dark_ui_summary_off_auto_mode_custom_bedtime" msgid="7759826673214624622">"Bus įjungta automatiškai atėjus laikui miegoti"</string>
-    <!-- no translation found for dark_ui_summary_off_auto_mode_modes (2672694802103388896) -->
-    <skip />
+    <string name="dark_ui_summary_off_auto_mode_modes" msgid="2672694802103388896">"Bus įjungta, kai prasidės <xliff:g id="ID_1">%1$s</xliff:g>"</string>
     <string name="dark_ui_summary_on_auto_mode_never" msgid="2468597062391435521">"Niekada nebus išjungta automatiškai"</string>
     <string name="dark_ui_summary_on_auto_mode_auto" msgid="5553376115092648636">"Bus išjungta automatiškai saulei tekant"</string>
     <string name="dark_ui_summary_on_auto_mode_custom" msgid="2526935680241734784">"Bus išjungta automatiškai <xliff:g id="ID_1">%1$s</xliff:g>"</string>
     <string name="dark_ui_summary_on_auto_mode_custom_bedtime" msgid="1976993025762551246">"Bus išjungta automatiškai pasibaigus laikui miegoti"</string>
-    <!-- no translation found for dark_ui_summary_on_auto_mode_modes (7769594183411785087) -->
-    <skip />
+    <string name="dark_ui_summary_on_auto_mode_modes" msgid="7769594183411785087">"Bus išjungta, kai baigsis <xliff:g id="ID_1">%1$s</xliff:g>"</string>
     <string name="dark_ui_text" msgid="4392646155331126666">"Tamsiojoje temoje naudojamas tamsus fonas, kad akumuliatorius ilgiau veiktų tam tikruose ekranuose. Tamsiosios temos tvarkaraščiai neprasideda, kol ekranas neišsijungia."</string>
     <string name="dark_ui_bedtime_footer_summary" msgid="5576501833145170581">"Tamsioji tema šiuo metu veikia pagal miego režimo tvarkaraštį"</string>
     <string name="dark_ui_bedtime_footer_action" msgid="1493095487994054339">"Miego režimo nustatymai"</string>
-    <!-- no translation found for dark_ui_modes_footer_summary (1041117250408363391) -->
-    <skip />
-    <!-- no translation found for dark_ui_modes_footer_action (80671811848446248) -->
-    <skip />
+    <string name="dark_ui_modes_footer_summary" msgid="1041117250408363391">"{count,plural,offset:2 =0{Režimai taip pat gali suaktyvinti tamsiąją temą}=1{Režimas „{mode_1}“ taip pat suaktyvina tamsiąją temą}=2{Režimai „{mode_1}“ ir „{mode_2}“ taip pat suaktyvina tamsiąją temą}=3{Režimai „{mode_1}“, „{mode_2}“ ir „{mode_3}“ taip pat suaktyvina tamsiąją temą}one{„{mode_1}“, „{mode_2}“ ir dar # režimas taip pat suaktyvina tamsiąją temą}few{„{mode_1}“, „{mode_2}“ ir dar # režimai taip pat suaktyvina tamsiąją temą}many{„{mode_1}“, „{mode_2}“ ir dar # režimo taip pat suaktyvina tamsiąją temą}other{„{mode_1}“, „{mode_2}“ ir dar # režimų taip pat suaktyvina tamsiąją temą}}"</string>
+    <string name="dark_ui_modes_footer_action" msgid="80671811848446248">"Režimų nustatymai"</string>
     <string name="even_dimmer_display_title" msgid="6731255736830410149">"Dar blankesnis"</string>
     <string name="even_dimmer_display_summary" msgid="120301078873242172">"Leisti blankesnį įrenginio ekraną nei įprastai"</string>
     <string name="screen_timeout" msgid="7709947617767439410">"Ekrano skirtasis laikas"</string>
@@ -1960,10 +1980,14 @@
     <skip />
     <string name="pointer_fill_style_black_button" msgid="4540815366995820960">"Keisti rodyklės užpildymo stilių į juodą"</string>
     <string name="pointer_fill_style_green_button" msgid="3731413496528067979">"Keisti rodyklės užpildymo stilių į žalią"</string>
-    <string name="pointer_fill_style_yellow_button" msgid="5025969961559379024">"Keisti rodyklės užpildymo stilių į geltoną"</string>
+    <!-- no translation found for pointer_fill_style_red_button (6424326623906159283) -->
+    <skip />
     <string name="pointer_fill_style_pink_button" msgid="4106218142489635673">"Keisti rodyklės užpildymo stilių į rožinį"</string>
     <string name="pointer_fill_style_blue_button" msgid="5594958078854032785">"Keisti rodyklės užpildymo stilių į mėlyną"</string>
-    <string name="pointer_stroke_style" msgid="1886986630216050665">"Rodyklės brūkšnio stilius"</string>
+    <!-- no translation found for pointer_fill_style_purple_button (3713175300139801778) -->
+    <skip />
+    <!-- no translation found for pointer_stroke_style (139962661485972329) -->
+    <skip />
     <string name="pointer_stroke_style_name_white" msgid="673686194443825383">"Balta"</string>
     <string name="pointer_stroke_style_name_black" msgid="4655806167067437330">"Juoda"</string>
     <string name="pointer_stroke_style_name_none" msgid="8953927511729800247">"Nėra"</string>
@@ -2245,8 +2269,7 @@
     <string name="accessibility_button_opacity_title" msgid="4727355657530362289">"Skaidrumas, kai nenaudojamas"</string>
     <string name="accessibility_button_low_label" msgid="4193015407828927741">"Skaidrus"</string>
     <string name="accessibility_button_high_label" msgid="9138077512008190896">"Neskaidrus"</string>
-    <!-- no translation found for accessibility_button_disabled_button_mode_summary (1978174613270619492) -->
-    <skip />
+    <string name="accessibility_button_disabled_button_mode_summary" msgid="1978174613270619492">"Nepasiek. naudojant naršymo juostos mygtukų režimą."</string>
     <string name="accessibility_toggle_high_text_contrast_preference_title" msgid="1830189632458752698">"Didelio kontrasto tekstas"</string>
     <string name="accessibility_toggle_high_text_contrast_preference_summary" msgid="5286411556836346180">"Keiskite teksto spalvą į juodą arba baltą. Nustatykite didžiausią kontrastą su fonu."</string>
     <string name="accessibility_toggle_maximize_text_contrast_preference_title" msgid="8737272017343509753">"Padidinti teksto kontrastą"</string>
@@ -3320,7 +3343,8 @@
     <string name="keywords_always_show_time_info" msgid="1066752498285497595">"visada įjungta ekrano užsklanda, AOD"</string>
     <string name="keywords_change_nfc_tag_apps_state" msgid="9032287964590554366">"NFC, žyma, skaitytuvas"</string>
     <string name="keywords_keyboard_vibration" msgid="6485149510591654697">"klaviatūra, lietimo technologija, vibruoti,"</string>
-    <string name="sound_dashboard_summary" msgid="6574444810552643312">"Garsumas, vibravimas, netrukdymo režimas"</string>
+    <string name="sound_dashboard_summary" msgid="8254699132423665654">"Garsumas ir vibravimas"</string>
+    <string name="sound_dashboard_summary_with_dnd" msgid="731956092218394657">"Garsumas, vibravimas, netrukdymo režimas"</string>
     <string name="media_volume_option_title" msgid="5966569685119475630">"Medijų garsumas"</string>
     <string name="remote_media_volume_option_title" msgid="8760846743943305764">"Perdavimo garsumas"</string>
     <string name="call_volume_option_title" msgid="1461105986437268924">"Skambučio garsumas"</string>
@@ -3846,7 +3870,7 @@
     <string name="zen_mode_apps_category" msgid="4082380323683889391">"Programos, kurios gali trikdyti"</string>
     <string name="zen_mode_apps_priority_apps" msgid="7386196048313716076">"Pasirinktos programos"</string>
     <string name="zen_mode_apps_none_apps" msgid="2493642312793604327">"Netaikoma"</string>
-    <string name="zen_mode_apps_subtext" msgid="1764211974662012877">"{count,plural,offset:2 =0{Jokios programos negali trukdyti}=1{„{app_1}“ gali trukdyti}=2{„{app_1}“ ir „{app_2}“ gali trukdyti}=3{„{app_1}“, „{app_2}“ ir „{app_3}“ gali trukdyti}one{„{app_1}“, „{app_2}“ ir dar # programa gali trukdyti}few{„{app_1}“, „{app_2}“ ir dar # programos gali trukdyti}many{„{app_1}“, „{app_2}“ ir dar # programos gali trukdyti}other{„{app_1}“, „{app_2}“ ir dar # programų gali trukdyti}}"</string>
+    <string name="zen_mode_apps_subtext" msgid="1764211974662012877">"{count,plural,offset:2 =0{Jokios programos negali trikdyti}=1{„{app_1}“ gali trikdyti}=2{„{app_1}“ ir „{app_2}“ gali trikdyti}=3{„{app_1}“, „{app_2}“ ir „{app_3}“ gali trikdyti}one{„{app_1}“, „{app_2}“ ir dar # programa gali trikdyti}few{„{app_1}“, „{app_2}“ ir dar # programos gali trikdyti}many{„{app_1}“, „{app_2}“ ir dar # programos gali trikdyti}other{„{app_1}“, „{app_2}“ ir dar # programų gali trikdyti}}"</string>
     <string name="zen_mode_apps_work_app" msgid="8528767938316361588">"„<xliff:g id="APP_LABEL">%s</xliff:g>“ (darbas)"</string>
     <string name="zen_mode_apps_calculating" msgid="5420121396943539286">"Skaičiuojama…"</string>
     <string name="zen_mode_plus_n_items" msgid="6136713354369243421">"Dar <xliff:g id="NUMBER">%d</xliff:g>"</string>
@@ -4784,7 +4808,8 @@
     <string name="mobile_network_mode_error" msgid="9222056129897416074">"Netinkamas tinklo režimas (<xliff:g id="NETWORKMODEID">%1$d</xliff:g>). Nepaisyti."</string>
     <string name="satellite_setting_title" msgid="2543034229989047673">"Palydoviniai pranešimai"</string>
     <string name="satellite_setting_enabled_summary" msgid="3554127722727530845">"Siųskite ir gaukite teksto pranešimus per palydovą. Įtraukiama į jūsų paskyrą."</string>
-    <string name="satellite_setting_disabled_summary" msgid="6789122487534159857">"Siųskite ir gaukite teksto pranešimus per palydovą. Neįtraukiama į jūsų paskyrą."</string>
+    <!-- no translation found for satellite_setting_disabled_summary (8428393986403708690) -->
+    <skip />
     <string name="keywords_satellite_setting" msgid="3312183289776517695">"Palydoviniai pranešimai"</string>
     <string name="category_name_about_satellite_messaging" msgid="3756205049485508340">"Apie palydovinius pranešimus"</string>
     <string name="title_about_satellite_setting" msgid="9212860038048311345">"Galite siųsti ir gauti teksto pranešimus palydovo ryšiu, jei turite tinkamą „<xliff:g id="CARRIER_NAME">%1$s</xliff:g>“ paskyrą"</string>
@@ -5305,10 +5330,8 @@
     <string name="show_captions_enabled" msgid="7089043007924626">"Įjungta"</string>
     <string name="live_caption_disabled" msgid="3562035026547887366">"Išjungta"</string>
     <string name="live_caption_enabled" msgid="5269360946200718949">"Įjungta"</string>
-    <!-- no translation found for audio_seek_bar_state_left_first (1641359989891833888) -->
-    <skip />
-    <!-- no translation found for audio_seek_bar_state_right_first (6027686565598201061) -->
-    <skip />
+    <string name="audio_seek_bar_state_left_first" msgid="1641359989891833888">"Garsas <xliff:g id="PERCENT_LEFT">%1$s</xliff:g> kairėje, <xliff:g id="PERCENT_RIGHT">%2$s</xliff:g> dešinėje"</string>
+    <string name="audio_seek_bar_state_right_first" msgid="6027686565598201061">"Garsas <xliff:g id="PERCENT_RIGHT">%1$s</xliff:g> dešinėje, <xliff:g id="PERCENT_LEFT">%2$s</xliff:g> kairėje"</string>
     <string name="about_phone_device_name_warning" msgid="3243226572404472381">"Įrenginio pavadinimas matomas jūsų įdiegtoms programoms. Kai prisijungiate prie „Bluetooth“ įrenginių ar „Wi-FI“ tinklo arba nustatote „Wi-Fi“ viešosios interneto prieigos tašką, jį taip pat gali matyti kiti žmonės."</string>
     <string name="grammatical_gender_title" msgid="8584242850477270828">"Gramatinė giminė"</string>
     <string name="grammatical_gender_dialog_title" msgid="8754048592099871587">"Pasirinkite gramatinę giminę"</string>
@@ -5404,6 +5427,7 @@
     <string name="audio_streams_dialog_learn_more" msgid="6711241053442211345">"Sužinokite daugiau"</string>
     <string name="audio_streams_dialog_cannot_play" msgid="1358828316927479091">"Nepavyksta paleisti šio garso srauto „<xliff:g id="DEVICE_NAME">%1$s</xliff:g>“."</string>
     <string name="audio_streams_listening_now" msgid="4205614429222949176">"Klausoma dabar"</string>
+    <string name="audio_streams_present_now" msgid="1128360774541089402">"Pristabdė rengėjas"</string>
     <string name="audio_streams_media_service_notification_leave_broadcast_text" msgid="4938656134300913647">"Sustabdyti klausymą"</string>
     <string name="audio_streams_dialog_no_le_device_title" msgid="3931163990976742282">"Suderinamų ausinių prijungimas"</string>
     <string name="audio_streams_dialog_no_le_device_button" msgid="4484355549428642588">"Prijungti įrenginį"</string>
