--- a/res/values-si/strings.xml
+++ b/res/values-si/strings.xml
@@ -412,6 +412,28 @@
     <string name="security_settings_fingerprint_single_face_watch_preference_summary" msgid="764951912234638192">"මුහුණ, ඇඟිලි සලකුණ, සහ <xliff:g id="WATCH">%s</xliff:g> එක් කර ඇත"</string>
     <string name="security_settings_fingerprint_multiple_face_watch_preference_summary" msgid="3935500711366489380">"මුහුණ, ඇඟිලි සලකුණු, සහ <xliff:g id="WATCH">%s</xliff:g> එක් කර ඇත"</string>
     <string name="mandatory_biometrics_prompt_description" msgid="6790144699440050735">"අනන්‍යතා පරීක්ෂාව ක්‍රියාත්මක වන අතර ජෛවමිතිකයක් අවශ්‍ය වේ"</string>
+    <!-- no translation found for go_to_settings (4394928396153474179) -->
+    <skip />
+    <!-- no translation found for identity_check_lockout_error_title (7486409651908283892) -->
+    <skip />
+    <!-- no translation found for identity_check_lockout_error_description_1 (4882147327291296884) -->
+    <skip />
+    <!-- no translation found for identity_check_lockout_error_two_factor_auth_description_1 (8369894114882274736) -->
+    <skip />
+    <!-- no translation found for identity_check_lockout_error_description_2 (5512321457771307067) -->
+    <skip />
+    <!-- no translation found for identity_check_general_error_title (5073929400896102674) -->
+    <skip />
+    <!-- no translation found for identity_check_general_error_description_1 (5260846996256699095) -->
+    <skip />
+    <!-- no translation found for identity_check_biometric_error_cancel (3353689146211669291) -->
+    <skip />
+    <!-- no translation found for identity_check_biometric_error_ok (4535306787363107304) -->
+    <skip />
+    <!-- no translation found for go_to_identity_check (5215846637575231800) -->
+    <skip />
+    <!-- no translation found for identity_check_lockout_error_lock_screen (3021787511681444051) -->
+    <skip />
     <string name="security_settings_remoteauth_preference_title" msgid="8319680328086089533">"දුරස්ථ සත්‍යාපක අගුලු හරින්න"</string>
     <string name="security_settings_remoteauth_preference_summary" msgid="1507004469316635196">"ඔරලෝසුව එක් කර ඇත"</string>
     <string name="security_settings_remoteauth_enroll_introduction_title" msgid="2151004795778999671">"ඔබේ ඔරලෝසුව පිහිටුවන්න"</string>
@@ -796,6 +818,8 @@
     <string name="lockpassword_password_requires_nonnumerical" msgid="389687423482993365">"{count,plural, =1{අඩු තරමින් සංඛ්‍යාත්මක-නොවන 1 අනුලකුණක් තිබිය යුතු වේ}one{අඩු තරමින් සංඛ්‍යාමය නොවන අනුලකුණු #ක් තිබිය යුතු වේ}other{අඩු තරමින් සංඛ්‍යාමය නොවන අනුලකුණු #ක් තිබිය යුතු වේ}}"</string>
     <string name="lockpassword_password_recently_used" msgid="5341218079730167191">"උපාංග පරිපාලක මෑත මුරපදයක් භාවිතා කිරීමට අවසර නොදේ."</string>
     <string name="lockpassword_pin_no_sequential_digits" msgid="5843639256988031272">"ආරෝහණ, අවරෝහණ හෝ ප්‍රනරාවර්ත අනුක්‍රමයේ අංක වෙත අවසර නැත"</string>
+    <!-- no translation found for lockpassword_password_no_sequential_characters (2191567105898075606) -->
+    <skip />
     <string name="lockpassword_confirm_label" msgid="560897521093566777">"තහවුරු කරන්න"</string>
     <string name="lockpassword_clear_label" msgid="311359833434539894">"හිස් කරන්න"</string>
     <string name="lockpassword_credential_changed" msgid="5934778179732392028">"තිර අඟුල එවිට වෙනස් කර තිබුණා. නව තිර අඟුල සමඟ නැවත උත්සාහ කරන්න."</string>
@@ -1277,21 +1301,17 @@
     <string name="dark_ui_summary_off_auto_mode_auto" msgid="6766831395970887213">"හිරු බැස යාමේදී ස්වයංක්‍රියව ක්‍රියාත්මක කරනු ඇත"</string>
     <string name="dark_ui_summary_off_auto_mode_custom" msgid="1345906088326708376">"<xliff:g id="ID_1">%1$s</xliff:g>ට ස්වයංක්‍රියව ක්‍රියාත්මක වනු ඇත"</string>
     <string name="dark_ui_summary_off_auto_mode_custom_bedtime" msgid="7759826673214624622">"නින්දට යන වේලාවට ස්වයංක්‍රියව ක්‍රියාත්මක වනු ඇත"</string>
-    <!-- no translation found for dark_ui_summary_off_auto_mode_modes (2672694802103388896) -->
-    <skip />
+    <string name="dark_ui_summary_off_auto_mode_modes" msgid="2672694802103388896">"<xliff:g id="ID_1">%1$s</xliff:g> ආරම්භ වන විට ක්‍රියාත්මක වනු ඇත"</string>
     <string name="dark_ui_summary_on_auto_mode_never" msgid="2468597062391435521">"කිසි විටෙක ස්වයංක්‍රියව ක්‍රියාවිරහිත නොකරනු ඇත"</string>
     <string name="dark_ui_summary_on_auto_mode_auto" msgid="5553376115092648636">"හිරු නැගීමේදී ස්වයංක්‍රියව ක්‍රියාවිරහිත කරනු ඇත"</string>
     <string name="dark_ui_summary_on_auto_mode_custom" msgid="2526935680241734784">"<xliff:g id="ID_1">%1$s</xliff:g>ට ස්වයංක්‍රියව ක්‍රියාවිරහිත වනු ඇත"</string>
     <string name="dark_ui_summary_on_auto_mode_custom_bedtime" msgid="1976993025762551246">"නින්දට යන වේලාවට පසු ස්වයංක්‍රියව ක්‍රියාවිරහිත වනු ඇත"</string>
-    <!-- no translation found for dark_ui_summary_on_auto_mode_modes (7769594183411785087) -->
-    <skip />
+    <string name="dark_ui_summary_on_auto_mode_modes" msgid="7769594183411785087">"<xliff:g id="ID_1">%1$s</xliff:g> නිමා වන විට ක්‍රියාවිරහිත වනු ඇත"</string>
     <string name="dark_ui_text" msgid="4392646155331126666">"අඳුරු තේමාව ඔබේ බැටරිය සමහර තිරවල දිගු කාලයක් පවත්වා ගැනීම සඳහා සහාය වීමට කලු පසුබිමක් භාවිත කරයි. අඳුරු තේමා කාල සටහන් ක්‍රියාත්මක වීමට ඔබගේ තිරය ක්‍රියාවිරහිත වන තෙක් රැඳී සිටී."</string>
     <string name="dark_ui_bedtime_footer_summary" msgid="5576501833145170581">"අඳුරු තේමාව දැනට ඔබගේ නින්දට යන වේලා ප්‍රකාරයේ කාල සටහන අනුගමනය කරයි"</string>
     <string name="dark_ui_bedtime_footer_action" msgid="1493095487994054339">"නින්දට යන වේලාවේ ප්‍රකාර සැකසීම්"</string>
-    <!-- no translation found for dark_ui_modes_footer_summary (1041117250408363391) -->
-    <skip />
-    <!-- no translation found for dark_ui_modes_footer_action (80671811848446248) -->
-    <skip />
+    <string name="dark_ui_modes_footer_summary" msgid="1041117250408363391">"{count,plural,offset:2 =0{ප්‍රකාර අඳුරු තේමාව ද සක්‍රිය කළ හැක}=1{{mode_1} අඳුරු තේමාව ද සක්‍රිය කරයි}=2{{mode_1} සහ {mode_2} අඳුරු තේමාව ද සක්‍රිය කරයි}=3{{mode_1}, {mode_2}, සහ {mode_3} අඳුරු තේමාව ද සක්‍රිය කරයි}one{{mode_1}, {mode_2}, සහ තව #ක් අඳුරු තේමාව ද සක්‍රිය කරයි}other{{mode_1}, {mode_2}, සහ තව #ක් අඳුරු තේමාව ද සක්‍රිය කරයි}}"</string>
+    <string name="dark_ui_modes_footer_action" msgid="80671811848446248">"ප්‍රකාර සැකසීම්"</string>
     <string name="even_dimmer_display_title" msgid="6731255736830410149">"තවත් අඳුරු"</string>
     <string name="even_dimmer_display_summary" msgid="120301078873242172">"උපාංගයට සාමාන්‍යයට වඩා අඳුරු වීමට ඉඩ දෙන්න"</string>
     <string name="screen_timeout" msgid="7709947617767439410">"තිර කල් ඉකුත්වීම"</string>
@@ -1956,14 +1976,17 @@
     <string name="trackpad_bottom_right_tap_title" msgid="230337692279220068">"පහළ-දකුණ ක්ලික් කරන්න"</string>
     <string name="trackpad_bottom_right_tap_summary" msgid="4467915480282133447">"තවත් විකල්ප සඳහා ස්පර්ශ පුවරුව හි පහළ දකුණු කෙළවරේ ක්ලික් කරන්න"</string>
     <string name="trackpad_pointer_speed" msgid="7786579408631352625">"දර්ශක වේගය"</string>
-    <!-- no translation found for pointer_fill_style (8794616790175016092) -->
-    <skip />
+    <string name="pointer_fill_style" msgid="8794616790175016092">"දර්ශක වර්ණය"</string>
     <string name="pointer_fill_style_black_button" msgid="4540815366995820960">"දර්ශක පිරවුම් විලාසය කළු පැහැයට වෙනස් කරන්න"</string>
     <string name="pointer_fill_style_green_button" msgid="3731413496528067979">"දර්ශක පිරවුම් විලාසය කොළ පැහැයට වෙනස් කරන්න"</string>
-    <string name="pointer_fill_style_yellow_button" msgid="5025969961559379024">"දර්ශක පිරවුම් විලාසය කහ පැහැයට වෙනස් කරන්න"</string>
+    <!-- no translation found for pointer_fill_style_red_button (6424326623906159283) -->
+    <skip />
     <string name="pointer_fill_style_pink_button" msgid="4106218142489635673">"දර්ශක පිරවුම් විලාසය රෝස පැහැයට වෙනස් කරන්න"</string>
     <string name="pointer_fill_style_blue_button" msgid="5594958078854032785">"දර්ශක පිරවුම් විලාසය නිල් පැහැයට වෙනස් කරන්න"</string>
-    <string name="pointer_stroke_style" msgid="1886986630216050665">"දර්ශක පහර විලාසය"</string>
+    <!-- no translation found for pointer_fill_style_purple_button (3713175300139801778) -->
+    <skip />
+    <!-- no translation found for pointer_stroke_style (139962661485972329) -->
+    <skip />
     <string name="pointer_stroke_style_name_white" msgid="673686194443825383">"සුදු"</string>
     <string name="pointer_stroke_style_name_black" msgid="4655806167067437330">"කළු"</string>
     <string name="pointer_stroke_style_name_none" msgid="8953927511729800247">"කිසිවක් නැත"</string>
@@ -2074,12 +2097,9 @@
     <string name="general_category_title" msgid="6298579528716834157">"පොදු"</string>
     <string name="display_category_title" msgid="6638191682294461408">"සංදර්ශකය"</string>
     <string name="accessibility_color_and_motion_title" msgid="2323301706545305874">"වර්ණය සහ චලනය"</string>
-    <!-- no translation found for accessibility_pointer_and_touchpad_title (8719482393177273831) -->
-    <skip />
-    <!-- no translation found for accessibility_pointer_and_touchpad_summary (6089872217234956258) -->
-    <skip />
-    <!-- no translation found for accessibility_pointer_color_customization_title (3376392766113189508) -->
-    <skip />
+    <string name="accessibility_pointer_and_touchpad_title" msgid="8719482393177273831">"දර්ශක සහ ස්පර්ශ පුවරු ප්‍රවේශ්‍යතාව"</string>
+    <string name="accessibility_pointer_and_touchpad_summary" msgid="6089872217234956258">"දර්ශක වර්ණය, දර්ශක තරම සහ තවත් දේ"</string>
+    <string name="accessibility_pointer_color_customization_title" msgid="3376392766113189508">"දර්ශක වර්ණ අභිරුචිකරණය"</string>
     <string name="accessibility_color_contrast_title" msgid="5757724357142452378">"වර්ණ අසමානතාව"</string>
     <string name="accessibility_color_contrast_intro" msgid="7795090401101214930">"ඉහළ අසමානතාව පෙළ, බොත්තම් සහ අයිකන වඩාත් කැපී පෙනෙන ලෙස සකසයි. ඔබට වඩාත්ම හොඳ යැයි හැඟෙන අසමානතාව තෝරන්න."</string>
     <string name="color_contrast_note" msgid="7592686603372566198">"සමහර යෙදුම් සියලු වර්ණ සහ පෙළ අසමානතා සැකසීම් සඳහා සහාය නොදක්වයි"</string>
@@ -2245,8 +2265,7 @@
     <string name="accessibility_button_opacity_title" msgid="4727355657530362289">"භාවිතයේ නොමැති විට පාරදෘශ්‍යතාව"</string>
     <string name="accessibility_button_low_label" msgid="4193015407828927741">"පාරදෘශ්‍ය"</string>
     <string name="accessibility_button_high_label" msgid="9138077512008190896">"පාරදෘශ්‍ය නොවන"</string>
-    <!-- no translation found for accessibility_button_disabled_button_mode_summary (1978174613270619492) -->
-    <skip />
+    <string name="accessibility_button_disabled_button_mode_summary" msgid="1978174613270619492">"සංචාලන තීරු බොත්තම් ප්‍රකාරය භාවිතා කරන අතරේ ලබා ගත නොහැක."</string>
     <string name="accessibility_toggle_high_text_contrast_preference_title" msgid="1830189632458752698">"ඉහළම වෙනසක් ඇති පෙළ"</string>
     <string name="accessibility_toggle_high_text_contrast_preference_summary" msgid="5286411556836346180">"පෙළ වර්ණය කළු හෝ සුදු ලෙස වෙනස් කරන්න. පසුබිම සමඟ වෙනස උපරිම කරයි."</string>
     <string name="accessibility_toggle_maximize_text_contrast_preference_title" msgid="8737272017343509753">"පෙළ අසමානතාව උපරිම කරන්න"</string>
@@ -3320,7 +3339,10 @@
     <string name="keywords_always_show_time_info" msgid="1066752498285497595">"හැම විට ම ක්‍රියාත්මක හාත්පස සංදර්ශකය, AOD"</string>
     <string name="keywords_change_nfc_tag_apps_state" msgid="9032287964590554366">"NFC ලේබලය, කියවනය"</string>
     <string name="keywords_keyboard_vibration" msgid="6485149510591654697">"යතුරු පුවරුව, ස්පර්ශ, කම්පනය,"</string>
-    <string name="sound_dashboard_summary" msgid="6574444810552643312">"හඬ, කම්පනය, බාධා නොකරන්න"</string>
+    <!-- no translation found for sound_dashboard_summary (8254699132423665654) -->
+    <skip />
+    <!-- no translation found for sound_dashboard_summary_with_dnd (731956092218394657) -->
+    <skip />
     <string name="media_volume_option_title" msgid="5966569685119475630">"මාධ්‍ය ශබ්දය"</string>
     <string name="remote_media_volume_option_title" msgid="8760846743943305764">"විකාශන හඬ"</string>
     <string name="call_volume_option_title" msgid="1461105986437268924">"ඇමතුම් ශබ්දය"</string>
@@ -4784,7 +4806,8 @@
     <string name="mobile_network_mode_error" msgid="9222056129897416074">"වලංගු නොවන ජාල ප්‍රකාරය <xliff:g id="NETWORKMODEID">%1$d</xliff:g> . නොසලකා හරින්න."</string>
     <string name="satellite_setting_title" msgid="2543034229989047673">"චන්ද්‍රිකා පණිවුඩ යැවීම"</string>
     <string name="satellite_setting_enabled_summary" msgid="3554127722727530845">"චන්ද්‍රිකා මඟින් කෙටි පණිවුඩ යැවීම සහ ලබා ගැනීම. ඔබේ ගිණුම සමග ඇතුළත් කර ඇත."</string>
-    <string name="satellite_setting_disabled_summary" msgid="6789122487534159857">"චන්ද්‍රිකා මඟින් කෙටි පණිවුඩ යැවීම සහ ලබා ගැනීම. ඔබේ ගිණුම සමග ඇතුළත් කර නැත."</string>
+    <!-- no translation found for satellite_setting_disabled_summary (8428393986403708690) -->
+    <skip />
     <string name="keywords_satellite_setting" msgid="3312183289776517695">"චන්ද්‍රිකා පණිවුඩ යැවීම"</string>
     <string name="category_name_about_satellite_messaging" msgid="3756205049485508340">"චන්ද්‍රිකා පණිවුඩ යැවීම ගැන"</string>
     <string name="title_about_satellite_setting" msgid="9212860038048311345">"ඔබට සුදුසුකම් ලත් <xliff:g id="CARRIER_NAME">%1$s</xliff:g> ගිණුමක කොටසක් ලෙස චන්ද්‍රිකා මඟින් කෙටි පණිවුඩ යැවීමට සහ ලැබීමට හැක"</string>
@@ -5303,10 +5326,8 @@
     <string name="show_captions_enabled" msgid="7089043007924626">"ක්‍රියාත්මකයි"</string>
     <string name="live_caption_disabled" msgid="3562035026547887366">"ක්‍රියාවිරහිතයි"</string>
     <string name="live_caption_enabled" msgid="5269360946200718949">"ක්‍රියාත්මකයි"</string>
-    <!-- no translation found for audio_seek_bar_state_left_first (1641359989891833888) -->
-    <skip />
-    <!-- no translation found for audio_seek_bar_state_right_first (6027686565598201061) -->
-    <skip />
+    <string name="audio_seek_bar_state_left_first" msgid="1641359989891833888">"ශ්‍රව්‍ය <xliff:g id="PERCENT_LEFT">%1$s</xliff:g> වම, <xliff:g id="PERCENT_RIGHT">%2$s</xliff:g> දකුණ"</string>
+    <string name="audio_seek_bar_state_right_first" msgid="6027686565598201061">"ශ්‍රව්‍ය <xliff:g id="PERCENT_RIGHT">%1$s</xliff:g> වම, <xliff:g id="PERCENT_LEFT">%2$s</xliff:g> දකුණ"</string>
     <string name="about_phone_device_name_warning" msgid="3243226572404472381">"ඔබේ උපාංගයේ නම ඔබ ස්ථාපනය කර ඇති යෙදුම්වලට දෘශ්‍යමාන වේ. ඔබ බ්ලූටූත් උපාංග වෙත සම්බන්ධ වන විට, Wi-Fi ජාලයකට සම්බන්ධ වන විට හෝ Wi-Fi හොට්ස්පොට් එකක් පිහිටුවන විට එය වෙනත් පුද්ගලයන් විසින් ද දැකිය හැක."</string>
     <string name="grammatical_gender_title" msgid="8584242850477270828">"ව්‍යාකරණමය ලිංගභේදය"</string>
     <string name="grammatical_gender_dialog_title" msgid="8754048592099871587">"ව්‍යාකරණමය ලිංගභේදය තෝරන්න"</string>
@@ -5402,6 +5423,8 @@
     <string name="audio_streams_dialog_learn_more" msgid="6711241053442211345">"තව දැන ගන්න"</string>
     <string name="audio_streams_dialog_cannot_play" msgid="1358828316927479091">"<xliff:g id="DEVICE_NAME">%1$s</xliff:g> මත මෙම ශ්‍රව්‍ය ප්‍රවාහය වාදනය කළ නොහැක."</string>
     <string name="audio_streams_listening_now" msgid="4205614429222949176">"දැන් සවන් දෙයි"</string>
+    <!-- no translation found for audio_streams_present_now (1128360774541089402) -->
+    <skip />
     <string name="audio_streams_media_service_notification_leave_broadcast_text" msgid="4938656134300913647">"සවන් දීම නවත්වන්න"</string>
     <string name="audio_streams_dialog_no_le_device_title" msgid="3931163990976742282">"ගැළපෙන හෙඩ්ෆෝන් සම්බන්ධ කරන්න"</string>
     <string name="audio_streams_dialog_no_le_device_button" msgid="4484355549428642588">"උපාංගයක් සම්බන්ධ කරන්න"</string>
