--- a/res/values-sw/strings.xml
+++ b/res/values-sw/strings.xml
@@ -412,6 +412,28 @@
     <string name="security_settings_fingerprint_single_face_watch_preference_summary" msgid="764951912234638192">"Umeweka uso, alama ya kidole na <xliff:g id="WATCH">%s</xliff:g>"</string>
     <string name="security_settings_fingerprint_multiple_face_watch_preference_summary" msgid="3935500711366489380">"Umeweka uso, alama za vidole na <xliff:g id="WATCH">%s</xliff:g>"</string>
     <string name="mandatory_biometrics_prompt_description" msgid="6790144699440050735">"Kikagua Utambulisho kimewashwa na kinahitaji taarifa ya kibayometri"</string>
+    <!-- no translation found for go_to_settings (4394928396153474179) -->
+    <skip />
+    <!-- no translation found for identity_check_lockout_error_title (7486409651908283892) -->
+    <skip />
+    <!-- no translation found for identity_check_lockout_error_description_1 (4882147327291296884) -->
+    <skip />
+    <!-- no translation found for identity_check_lockout_error_two_factor_auth_description_1 (8369894114882274736) -->
+    <skip />
+    <!-- no translation found for identity_check_lockout_error_description_2 (5512321457771307067) -->
+    <skip />
+    <!-- no translation found for identity_check_general_error_title (5073929400896102674) -->
+    <skip />
+    <!-- no translation found for identity_check_general_error_description_1 (5260846996256699095) -->
+    <skip />
+    <!-- no translation found for identity_check_biometric_error_cancel (3353689146211669291) -->
+    <skip />
+    <!-- no translation found for identity_check_biometric_error_ok (4535306787363107304) -->
+    <skip />
+    <!-- no translation found for go_to_identity_check (5215846637575231800) -->
+    <skip />
+    <!-- no translation found for identity_check_lockout_error_lock_screen (3021787511681444051) -->
+    <skip />
     <string name="security_settings_remoteauth_preference_title" msgid="8319680328086089533">"Kufungua Remote Authenticator"</string>
     <string name="security_settings_remoteauth_preference_summary" msgid="1507004469316635196">"Saa imeoanishwa"</string>
     <string name="security_settings_remoteauth_enroll_introduction_title" msgid="2151004795778999671">"Weka mipangilio ya saa yako"</string>
@@ -796,6 +818,8 @@
     <string name="lockpassword_password_requires_nonnumerical" msgid="389687423482993365">"{count,plural, =1{Ni lazima nenosiri liwe na angalau herufi 1 ambayo si tarakimu}other{Ni lazima nenosiri liwe na angalau herufi # ambazo si tarakimu}}"</string>
     <string name="lockpassword_password_recently_used" msgid="5341218079730167191">"Msimamizi wa kifaa haruhusu kutumia nenosiri ulilotumia hivi majuzi"</string>
     <string name="lockpassword_pin_no_sequential_digits" msgid="5843639256988031272">"Haturuhusi mpangilio wa kupanda, kushuka au kujirudia kwa tarakimu"</string>
+    <!-- no translation found for lockpassword_password_no_sequential_characters (2191567105898075606) -->
+    <skip />
     <string name="lockpassword_confirm_label" msgid="560897521093566777">"Thibitisha"</string>
     <string name="lockpassword_clear_label" msgid="311359833434539894">"Futa"</string>
     <string name="lockpassword_credential_changed" msgid="5934778179732392028">"Mbinu ya kufunga skrini tayari imebadilishwa. Jaribu tena ukitumia mbinu mpya ya kufunga skrini."</string>
@@ -1277,21 +1301,17 @@
     <string name="dark_ui_summary_off_auto_mode_auto" msgid="6766831395970887213">"Itawashwa kiotomatiki jua litakapotua"</string>
     <string name="dark_ui_summary_off_auto_mode_custom" msgid="1345906088326708376">"Itawaka kiotomatiki saa <xliff:g id="ID_1">%1$s</xliff:g>"</string>
     <string name="dark_ui_summary_off_auto_mode_custom_bedtime" msgid="7759826673214624622">"Itajiwasha kiotomatiki wakati wa kulala"</string>
-    <!-- no translation found for dark_ui_summary_off_auto_mode_modes (2672694802103388896) -->
-    <skip />
+    <string name="dark_ui_summary_off_auto_mode_modes" msgid="2672694802103388896">"Itawaka <xliff:g id="ID_1">%1$s</xliff:g> ikianza"</string>
     <string name="dark_ui_summary_on_auto_mode_never" msgid="2468597062391435521">"Haitawahi kuzimwa kiotomatiki"</string>
     <string name="dark_ui_summary_on_auto_mode_auto" msgid="5553376115092648636">"Itazima kiotomatiki kutakapopambazuka"</string>
     <string name="dark_ui_summary_on_auto_mode_custom" msgid="2526935680241734784">"Itazima kiotomatiki saa <xliff:g id="ID_1">%1$s</xliff:g>"</string>
     <string name="dark_ui_summary_on_auto_mode_custom_bedtime" msgid="1976993025762551246">"Itajizima kiotomatiki wakati wa kulala ukiisha"</string>
-    <!-- no translation found for dark_ui_summary_on_auto_mode_modes (7769594183411785087) -->
-    <skip />
+    <string name="dark_ui_summary_on_auto_mode_modes" msgid="7769594183411785087">"Itazima <xliff:g id="ID_1">%1$s</xliff:g> ikiisha"</string>
     <string name="dark_ui_text" msgid="4392646155331126666">"Mandhari meusi hutumia mandharinyuma meusi ili kuboresha muda wa matumizi ya betri kwenye baadhi ya skrini. Ratiba za Mandhari meusi hujiwasha hadi skrini ya simu yako inapozima."</string>
     <string name="dark_ui_bedtime_footer_summary" msgid="5576501833145170581">"Kwa sasa mandhari meusi yanafuata ratiba yako ya hali tuli"</string>
     <string name="dark_ui_bedtime_footer_action" msgid="1493095487994054339">"Mipangilio ya Hali tuli"</string>
-    <!-- no translation found for dark_ui_modes_footer_summary (1041117250408363391) -->
-    <skip />
-    <!-- no translation found for dark_ui_modes_footer_action (80671811848446248) -->
-    <skip />
+    <string name="dark_ui_modes_footer_summary" msgid="1041117250408363391">"{count,plural,offset:2 =0{Hali zinaweza pia kuwezesha mandhari meusi}=1{{mode_1} huwezesha pia mandhari meusi}=2{{mode_1} na {mode_2} huwezesha pia mandhari meusi}=3{{mode_1}, {mode_2} na {mode_3} huwezesha pia mandhari meusi}other{{mode_1}, {mode_2} na nyingine # huwezesha pia mandhari meusi}}"</string>
+    <string name="dark_ui_modes_footer_action" msgid="80671811848446248">"Mipangilio ya hali"</string>
     <string name="even_dimmer_display_title" msgid="6731255736830410149">"Mwangaza uliofifia zaidi"</string>
     <string name="even_dimmer_display_summary" msgid="120301078873242172">"Ruhusu mwangaza wa kifaa hiki ufifie kuliko kawaida"</string>
     <string name="screen_timeout" msgid="7709947617767439410">"Muda wa skrini kujizima"</string>
@@ -1960,10 +1980,14 @@
     <skip />
     <string name="pointer_fill_style_black_button" msgid="4540815366995820960">"Badilisha kielekezi kiwe cheusi"</string>
     <string name="pointer_fill_style_green_button" msgid="3731413496528067979">"Badilisha kielekezi kiwe cha kijani"</string>
-    <string name="pointer_fill_style_yellow_button" msgid="5025969961559379024">"Badilisha kielekezi kiwe cha njano"</string>
+    <!-- no translation found for pointer_fill_style_red_button (6424326623906159283) -->
+    <skip />
     <string name="pointer_fill_style_pink_button" msgid="4106218142489635673">"Badilisha kielekezi kiwe cha waridi"</string>
     <string name="pointer_fill_style_blue_button" msgid="5594958078854032785">"Badilisha kielekezi kiwe cha buluu"</string>
-    <string name="pointer_stroke_style" msgid="1886986630216050665">"Muundo wa mcharazo wa kielekezi"</string>
+    <!-- no translation found for pointer_fill_style_purple_button (3713175300139801778) -->
+    <skip />
+    <!-- no translation found for pointer_stroke_style (139962661485972329) -->
+    <skip />
     <string name="pointer_stroke_style_name_white" msgid="673686194443825383">"Nyeupe"</string>
     <string name="pointer_stroke_style_name_black" msgid="4655806167067437330">"Nyeusi"</string>
     <string name="pointer_stroke_style_name_none" msgid="8953927511729800247">"Hamna"</string>
@@ -2245,8 +2269,7 @@
     <string name="accessibility_button_opacity_title" msgid="4727355657530362289">"Kupenyeza mwangaza wakati hakitumiki"</string>
     <string name="accessibility_button_low_label" msgid="4193015407828927741">"Kupenyeza mwangaza"</string>
     <string name="accessibility_button_high_label" msgid="9138077512008190896">"Kutopenyeza mwangaza"</string>
-    <!-- no translation found for accessibility_button_disabled_button_mode_summary (1978174613270619492) -->
-    <skip />
+    <string name="accessibility_button_disabled_button_mode_summary" msgid="1978174613270619492">"Haipatikani katika hali ya kitufe cha sehemu ya viungo muhimu."</string>
     <string name="accessibility_toggle_high_text_contrast_preference_title" msgid="1830189632458752698">"Maandishi yenye utofautishaji bora"</string>
     <string name="accessibility_toggle_high_text_contrast_preference_summary" msgid="5286411556836346180">"Badilisha rangi ya maandishi kuwa nyeusi au nyeupe. Ongeza utofautishaji ukitumia mandharinyuma."</string>
     <string name="accessibility_toggle_maximize_text_contrast_preference_title" msgid="8737272017343509753">"Imarisha utofautishaji wa matini"</string>
@@ -3320,7 +3343,10 @@
     <string name="keywords_always_show_time_info" msgid="1066752498285497595">"onyesho tulivu lisilozimwa kamwe, AOD"</string>
     <string name="keywords_change_nfc_tag_apps_state" msgid="9032287964590554366">"nfc, tagi, kisomaji"</string>
     <string name="keywords_keyboard_vibration" msgid="6485149510591654697">"kibodi, miguso, mtetemo,"</string>
-    <string name="sound_dashboard_summary" msgid="6574444810552643312">"Kiwango cha sauti, mtetemo, Usinisumbue"</string>
+    <!-- no translation found for sound_dashboard_summary (8254699132423665654) -->
+    <skip />
+    <!-- no translation found for sound_dashboard_summary_with_dnd (731956092218394657) -->
+    <skip />
     <string name="media_volume_option_title" msgid="5966569685119475630">"Sauti ya maudhui"</string>
     <string name="remote_media_volume_option_title" msgid="8760846743943305764">"Sauti ya maudhui ya kutumwa"</string>
     <string name="call_volume_option_title" msgid="1461105986437268924">"Sauti ya simu"</string>
@@ -3420,20 +3446,20 @@
     <string name="mode_interruption_filter_title" msgid="6293843948349239256">"Vichujio vya arifa"</string>
     <string name="mode_device_effects_title" msgid="6019908499525166737">"Mipangilio zaidi"</string>
     <string name="modes_sound_summary_off" msgid="6972648204528227879">"{count,plural, =0{Imezimwa}=1{Imezimwa au Hali 1 inaweza kuwashwa kiotomatiki}other{Imezimwa au Hali # zinaweza kuwashwa kiotomatiki}}"</string>
-    <string name="mode_display_settings_title" msgid="8132825978346535472">"Mipangilio ya kuonyesha"</string>
-    <string name="mode_display_options_section" msgid="5151597748243866532">"Chaguo za kuonyesha"</string>
+    <string name="mode_display_settings_title" msgid="8132825978346535472">"Mipangilio ya mwonekano"</string>
+    <string name="mode_display_options_section" msgid="5151597748243866532">"Chaguo za mwonekano"</string>
     <string name="mode_grayscale_title" msgid="6027553257331235461">"Kijivu"</string>
     <string name="mode_grayscale_title_secondary_list" msgid="2662593380253642581">"kijivu"</string>
     <string name="mode_grayscale_summary" msgid="6682099523626777038">"Badili skrini iwe nyeupe na nyeusi"</string>
     <string name="mode_aod_title" msgid="5903435070341237325">"Weka skrini iwe nyeusi"</string>
     <string name="mode_aod_title_secondary_list" msgid="8268180392811027557">"weka skrini iwe nyeusi"</string>
-    <string name="mode_aod_summary" msgid="7516159044827627065">"Zima kipengele cha skrini msingi"</string>
+    <string name="mode_aod_summary" msgid="7516159044827627065">"Zima hali ya skrini kuwaka kila wakati"</string>
     <string name="mode_wallpaper_title" msgid="5549693923133928374">"Punguza mwangaza wa mandhari"</string>
     <string name="mode_wallpaper_title_secondary_list" msgid="5034602021811580157">"punguza mwangaza wa mandhari"</string>
     <string name="mode_wallpaper_summary" msgid="665480011615603784">"Chuja mwangaza wa mandhari"</string>
     <string name="mode_dark_theme_title" msgid="8099007897943513209">"Washa mandhari meusi"</string>
     <string name="mode_dark_theme_title_secondary_list" msgid="4761262694149772845">"washa mandhari meusi"</string>
-    <string name="mode_dark_theme_summary" msgid="8428887193785431898">"Badili mfumo wa uendeshaji na programu uwe katika hali ya napendelea maandishi mepesi kwenye mandharinyuma meusi\", ambayo yanaweza kuonekana kwa urahisi na yanapelekea uokoaji mkubwa wa betri kwenye baadhi ya vifaa."</string>
+    <string name="mode_dark_theme_summary" msgid="8428887193785431898">"Badili mfumo wa uendeshaji na programu uwe katika hali inayopendelea maandishi angavu kwenye mandharinyuma meusi, ambayo yanaweza kuonekana kwa urahisi na yanasababisha uokoaji mkubwa wa betri kwenye baadhi ya vifaa"</string>
     <string name="mode_display_settings_summary" msgid="5929234706883482380">"{count,plural,offset:2 =0{Hakuna mabadiliko kwenye skrini}=1{{effect_1}}=2{{effect_1} na {effect_2}}=3{{effect_1}, {effect_2} na {effect_3}}other{{effect_1}, {effect_2} na # zaidi}}"</string>
     <string name="zen_mode_allow_all_notifications" msgid="7300894425550960390">"Ruhusu arifa zote"</string>
     <string name="zen_mode_all_notifications_allowed" msgid="7612213309293552413">"Watu, programu na sauti zinaweza kukatiza huduma"</string>
@@ -3458,7 +3484,7 @@
     <string name="zen_mode_block_effect_intent" msgid="7621578645742903531">"Usiwashe skrini"</string>
     <string name="zen_mode_block_effect_light" msgid="1997222991427784993">"Usipepese mwangaza"</string>
     <string name="zen_mode_block_effect_peek" msgid="2525844009475266022">"Usionyeshe arifa kwenye skrini"</string>
-    <string name="zen_mode_block_effect_status" msgid="5765965061064691918">"Ficha aikoni za sehemu ya arifa upande wa juu kwenye skrini"</string>
+    <string name="zen_mode_block_effect_status" msgid="5765965061064691918">"Ficha aikoni za sehemu ya arifa upande wa juu wa skrini"</string>
     <string name="zen_mode_block_effect_badge" msgid="332151258515152429">"Ficha vitone vya arifa kwenye aikoni za programu"</string>
     <string name="zen_mode_block_effect_ambient" msgid="1247740599476031543">"Skrini isiwake arifa zikiingia"</string>
     <string name="zen_mode_block_effect_list" msgid="7549367848660137118">"Usionyeshe kwenye orodha kunjuzi"</string>
@@ -3684,9 +3710,9 @@
     <string name="notif_listener_not_migrated" msgid="6265206376374278226">"Programu hii haitumii mipangilio iliyoboreshwa"</string>
     <string name="notif_listener_more_settings" msgid="1348409392307208921">"Mipangilio zaidi"</string>
     <string name="notif_listener_more_settings_desc" msgid="7995492074281663658">"Mipangilio zaidi inapatikana ndani ya programu hii"</string>
-    <string name="notification_polite_title" msgid="6121016426991791557">"Kupungua kwa shughuli ya arifa"</string>
+    <string name="notification_polite_title" msgid="6121016426991791557">"Kutuliza arifa"</string>
     <string name="notification_polite_main_control_title" msgid="5812529809151927149">"Tumia mipangilio ya kutuliza arifa"</string>
-    <string name="notification_polite_description" msgid="5497748284893832854">"Unapopokea arifa nyingi ndani ya muda mfupi, kifaa chako kitapunguza sauti na arifa kwa hadi dakika 2. Hali hii haitaathiri simu, kengele na mazungumzo ya kipaumbele. \n\nUnaweza kupata arifa ulizopokea wakati wa kupungua kwa shughuli kwa kutelezesha kidole chini kutoka sehemu ya juu ya skrini."</string>
+    <string name="notification_polite_description" msgid="5497748284893832854">"Unapopokea arifa nyingi ndani ya muda mfupi, kifaa chako kitapunguza sauti na arifa kwa hadi dakika 2. Hali hii haitaathiri simu, kengele na mazungumzo ya kipaumbele. \n\nUnaweza kupata arifa ulizopokea wakati wa kutulizwa kwa arifa kwa kutelezesha kidole chini kutoka sehemu ya juu ya skrini."</string>
     <string name="notification_polite_work" msgid="8823596456640216391">"Tumia kwenye wasifu wa kazini"</string>
     <string name="notification_polite_work_summary" msgid="5014189280132951378">"Inatumika kwa programu zenye wasifu wa kazini"</string>
     <string name="vr_listeners_title" msgid="4960357292472540964">"Huduma za kisaidizi cha Uhalisia Pepe"</string>
@@ -4784,7 +4810,8 @@
     <string name="mobile_network_mode_error" msgid="9222056129897416074">"Hali ya Mtandao Isiyo sahihi <xliff:g id="NETWORKMODEID">%1$d</xliff:g>. Puuza"</string>
     <string name="satellite_setting_title" msgid="2543034229989047673">"Kutuma ujumbe kupitia setilaiti"</string>
     <string name="satellite_setting_enabled_summary" msgid="3554127722727530845">"Tuma na upokee ujumbe wa maandishi kupitia setilaiti. Imejumuishwa kwenye akaunti yako."</string>
-    <string name="satellite_setting_disabled_summary" msgid="6789122487534159857">"Tuma na upokee ujumbe wa maandishi kupitia setilaiti. Haijumuishwi kwenye akaunti yako."</string>
+    <!-- no translation found for satellite_setting_disabled_summary (8428393986403708690) -->
+    <skip />
     <string name="keywords_satellite_setting" msgid="3312183289776517695">"Kutuma ujumbe kupitia setilaiti"</string>
     <string name="category_name_about_satellite_messaging" msgid="3756205049485508340">"Kuhusu kutuma ujumbe kupitia setilaiti"</string>
     <string name="title_about_satellite_setting" msgid="9212860038048311345">"Unaweza kutuma na kupokea ujumbe wa maandishi kupitia setilaiti kama sehemu ya akaunti inayotimiza masharti ya <xliff:g id="CARRIER_NAME">%1$s</xliff:g>"</string>
@@ -5303,10 +5330,8 @@
     <string name="show_captions_enabled" msgid="7089043007924626">"Imewashwa"</string>
     <string name="live_caption_disabled" msgid="3562035026547887366">"Imezimwa"</string>
     <string name="live_caption_enabled" msgid="5269360946200718949">"Imewashwa"</string>
-    <!-- no translation found for audio_seek_bar_state_left_first (1641359989891833888) -->
-    <skip />
-    <!-- no translation found for audio_seek_bar_state_right_first (6027686565598201061) -->
-    <skip />
+    <string name="audio_seek_bar_state_left_first" msgid="1641359989891833888">"Sauti ya kushoto ni <xliff:g id="PERCENT_LEFT">%1$s</xliff:g> na kulia ni <xliff:g id="PERCENT_RIGHT">%2$s</xliff:g>"</string>
+    <string name="audio_seek_bar_state_right_first" msgid="6027686565598201061">"Sauti ya kulia ni <xliff:g id="PERCENT_RIGHT">%1$s</xliff:g> na kushoto ni <xliff:g id="PERCENT_LEFT">%2$s</xliff:g>"</string>
     <string name="about_phone_device_name_warning" msgid="3243226572404472381">"Jina la kifaa chako litaonekana kwa programu ambazo umesakinisha. Huenda likaonekana pia na watu wengine unapooanisha na vifaa vyenye Bluetooth, unapounganisha kwenye mtandao wa Wi-Fi au unapoweka mipangilio ya mtandao pepe wa Wi-Fi."</string>
     <string name="grammatical_gender_title" msgid="8584242850477270828">"Jinsia ya kisarufi"</string>
     <string name="grammatical_gender_dialog_title" msgid="8754048592099871587">"Chagua Jinsia ya kisarufi"</string>
@@ -5402,6 +5427,8 @@
     <string name="audio_streams_dialog_learn_more" msgid="6711241053442211345">"Pata maelezo zaidi"</string>
     <string name="audio_streams_dialog_cannot_play" msgid="1358828316927479091">"Imeshindwa kucheza mtiririko huu wa maudhui ya sauti kwenye <xliff:g id="DEVICE_NAME">%1$s</xliff:g>."</string>
     <string name="audio_streams_listening_now" msgid="4205614429222949176">"Unasikiliza sasa"</string>
+    <!-- no translation found for audio_streams_present_now (1128360774541089402) -->
+    <skip />
     <string name="audio_streams_media_service_notification_leave_broadcast_text" msgid="4938656134300913647">"Acha kusikiliza"</string>
     <string name="audio_streams_dialog_no_le_device_title" msgid="3931163990976742282">"Unganisha vipokea sauti vya kichwani vinavyooana"</string>
     <string name="audio_streams_dialog_no_le_device_button" msgid="4484355549428642588">"Unganisha kifaa"</string>
