--- a/res/values-te/strings.xml
+++ b/res/values-te/strings.xml
@@ -412,6 +412,28 @@
     <string name="security_settings_fingerprint_single_face_watch_preference_summary" msgid="764951912234638192">"ముఖం, వేలిముద్ర, <xliff:g id="WATCH">%s</xliff:g> జోడించబడ్డాయి"</string>
     <string name="security_settings_fingerprint_multiple_face_watch_preference_summary" msgid="3935500711366489380">"ముఖం, వేలిముద్రలు, <xliff:g id="WATCH">%s</xliff:g> జోడించబడ్డాయి"</string>
     <string name="mandatory_biometrics_prompt_description" msgid="6790144699440050735">"ఐడెంటిటీ చెక్ ఆన్‌లో ఉంది, దానికి బయోమెట్రిక్ అవసరం"</string>
+    <!-- no translation found for go_to_settings (4394928396153474179) -->
+    <skip />
+    <!-- no translation found for identity_check_lockout_error_title (7486409651908283892) -->
+    <skip />
+    <!-- no translation found for identity_check_lockout_error_description_1 (4882147327291296884) -->
+    <skip />
+    <!-- no translation found for identity_check_lockout_error_two_factor_auth_description_1 (8369894114882274736) -->
+    <skip />
+    <!-- no translation found for identity_check_lockout_error_description_2 (5512321457771307067) -->
+    <skip />
+    <!-- no translation found for identity_check_general_error_title (5073929400896102674) -->
+    <skip />
+    <!-- no translation found for identity_check_general_error_description_1 (5260846996256699095) -->
+    <skip />
+    <!-- no translation found for identity_check_biometric_error_cancel (3353689146211669291) -->
+    <skip />
+    <!-- no translation found for identity_check_biometric_error_ok (4535306787363107304) -->
+    <skip />
+    <!-- no translation found for go_to_identity_check (5215846637575231800) -->
+    <skip />
+    <!-- no translation found for identity_check_lockout_error_lock_screen (3021787511681444051) -->
+    <skip />
     <string name="security_settings_remoteauth_preference_title" msgid="8319680328086089533">"రిమోట్ ప్రామాణీకరణదారు అన్‌లాక్"</string>
     <string name="security_settings_remoteauth_preference_summary" msgid="1507004469316635196">"వాచ్ జోడించబడింది"</string>
     <string name="security_settings_remoteauth_enroll_introduction_title" msgid="2151004795778999671">"మీ వాచ్‌ను సెటప్ చేయండి"</string>
@@ -796,6 +818,8 @@
     <string name="lockpassword_password_requires_nonnumerical" msgid="389687423482993365">"{count,plural, =1{తప్పనిసరిగా కనీసం 1 సంఖ్యేతర అక్షరాన్ని కలిగి ఉండాలి}other{తప్పనిసరిగా కనీసం # సంఖ్యేతర అక్షరాలను కలిగి ఉండాలి}}"</string>
     <string name="lockpassword_password_recently_used" msgid="5341218079730167191">"ఇటీవలి పాస్‌వర్డ్‌ను ఉపయోగించడానికి పరికర నిర్వాహకులు అనుమతించరు"</string>
     <string name="lockpassword_pin_no_sequential_digits" msgid="5843639256988031272">"అంకెలను ఒకటి తర్వాత ఒకటి పెంచుకుంటూ లేదా తగ్గించుకుంటూ లేదా ఒకే అంకెను వరుసగా రిపీటెడ్‌గా ఉపయోగించకూడదు"</string>
+    <!-- no translation found for lockpassword_password_no_sequential_characters (2191567105898075606) -->
+    <skip />
     <string name="lockpassword_confirm_label" msgid="560897521093566777">"నిర్ధారించండి"</string>
     <string name="lockpassword_clear_label" msgid="311359833434539894">"క్లియర్ చేయండి"</string>
     <string name="lockpassword_credential_changed" msgid="5934778179732392028">"స్క్రీన్ లాక్ ఇప్పటికే మార్చబడింది. కొత్త స్క్రీన్ లాక్‌తో మళ్లీ ట్రై చేయండి."</string>
@@ -1952,14 +1976,17 @@
     <string name="trackpad_bottom_right_tap_title" msgid="230337692279220068">"దిగువున కుడి వైపున క్లిక్ చేయడం"</string>
     <string name="trackpad_bottom_right_tap_summary" msgid="4467915480282133447">"మరిన్ని ఆప్షన్‌లకై టచ్‌ప్యాడ్ కింద కుడి మూలన క్లిక్ చేయండి"</string>
     <string name="trackpad_pointer_speed" msgid="7786579408631352625">"పాయింటర్ స్పీడ్"</string>
-    <!-- no translation found for pointer_fill_style (8794616790175016092) -->
-    <skip />
+    <string name="pointer_fill_style" msgid="8794616790175016092">"పాయింటర్ కలర్"</string>
     <string name="pointer_fill_style_black_button" msgid="4540815366995820960">"పాయింటర్ ఫిల్ స్టయిల్‌ను నలుపు రంగుకి మార్చండి"</string>
     <string name="pointer_fill_style_green_button" msgid="3731413496528067979">"పాయింటర్ ఫిల్ స్టయిల్‌ను ఆకుపచ్చ రంగుకి మార్చండి"</string>
-    <string name="pointer_fill_style_yellow_button" msgid="5025969961559379024">"పాయింటర్ ఫిల్ స్టయిల్‌ను పసుపు రంగుకి మార్చండి"</string>
+    <!-- no translation found for pointer_fill_style_red_button (6424326623906159283) -->
+    <skip />
     <string name="pointer_fill_style_pink_button" msgid="4106218142489635673">"పాయింటర్ ఫిల్ స్టయిల్‌ను గులాబీ రంగుకి మార్చండి"</string>
     <string name="pointer_fill_style_blue_button" msgid="5594958078854032785">"పాయింటర్ ఫిల్ స్టయిల్‌ను నీలం రంగుకి మార్చండి"</string>
-    <string name="pointer_stroke_style" msgid="1886986630216050665">"పాయింటర్ స్ట్రోక్ స్టయిల్"</string>
+    <!-- no translation found for pointer_fill_style_purple_button (3713175300139801778) -->
+    <skip />
+    <!-- no translation found for pointer_stroke_style (139962661485972329) -->
+    <skip />
     <string name="pointer_stroke_style_name_white" msgid="673686194443825383">"తెలుపు రంగు"</string>
     <string name="pointer_stroke_style_name_black" msgid="4655806167067437330">"నలుపు రంగు"</string>
     <string name="pointer_stroke_style_name_none" msgid="8953927511729800247">"ఏదీ వద్దు"</string>
@@ -2070,12 +2097,9 @@
     <string name="general_category_title" msgid="6298579528716834157">"సాధారణం"</string>
     <string name="display_category_title" msgid="6638191682294461408">"డిస్‌ప్లే"</string>
     <string name="accessibility_color_and_motion_title" msgid="2323301706545305874">"రంగు, మోషన్"</string>
-    <!-- no translation found for accessibility_pointer_and_touchpad_title (8719482393177273831) -->
-    <skip />
-    <!-- no translation found for accessibility_pointer_and_touchpad_summary (6089872217234956258) -->
-    <skip />
-    <!-- no translation found for accessibility_pointer_color_customization_title (3376392766113189508) -->
-    <skip />
+    <string name="accessibility_pointer_and_touchpad_title" msgid="8719482393177273831">"పాయింటర్ &amp; టచ్‌ప్యాడ్ యాక్సెసిబిలిటీ"</string>
+    <string name="accessibility_pointer_and_touchpad_summary" msgid="6089872217234956258">"పాయింటర్ రంగు, పాయింటర్ సైజు &amp; మరిన్ని"</string>
+    <string name="accessibility_pointer_color_customization_title" msgid="3376392766113189508">"పాయింటర్ రంగు అనుకూలీకరణ"</string>
     <string name="accessibility_color_contrast_title" msgid="5757724357142452378">"కలర్ కాంట్రాస్ట్"</string>
     <string name="accessibility_color_contrast_intro" msgid="7795090401101214930">"బటన్‌లు, చిహ్నాలను అధిక కాంట్రాస్ట్ టెక్స్ట్ మరింత ప్రత్యేకంగా చేస్తుంది. మీకు ఉత్తమంగా కనిపించే కాంట్రాస్ట్‌ను ఎంచుకోండి."</string>
     <string name="color_contrast_note" msgid="7592686603372566198">"కొన్ని యాప్‌లు అన్ని రంగు, టెక్స్ట్ కాంట్రాస్ట్ సెట్టింగ్‌లకు సపోర్ట్ చేయకపోవచ్చు"</string>
@@ -3315,7 +3339,8 @@
     <string name="keywords_always_show_time_info" msgid="1066752498285497595">"ఎల్లప్పుడూ యాంబియెంట్ డిస్‌ప్లేలో, AOD"</string>
     <string name="keywords_change_nfc_tag_apps_state" msgid="9032287964590554366">"nfc, ట్యాగ్, రీడర్"</string>
     <string name="keywords_keyboard_vibration" msgid="6485149510591654697">"కీబోర్డ్, స్పర్శ ప్రతిస్పందన టెక్నాలజీ, వైబ్రేట్,"</string>
-    <string name="sound_dashboard_summary" msgid="6574444810552643312">"వాల్యూమ్, వైబ్రేషన్, అంతరాయం కలిగించవద్దు"</string>
+    <string name="sound_dashboard_summary" msgid="8254699132423665654">"వాల్యూమ్, వైబ్రేషన్"</string>
+    <string name="sound_dashboard_summary_with_dnd" msgid="731956092218394657">"వాల్యూమ్, వైబ్రేషన్, అంతరాయం కలిగించవద్దు"</string>
     <string name="media_volume_option_title" msgid="5966569685119475630">"మీడియా వాల్యూమ్"</string>
     <string name="remote_media_volume_option_title" msgid="8760846743943305764">"ప్రసారం వాల్యూమ్"</string>
     <string name="call_volume_option_title" msgid="1461105986437268924">"కాల్ వాల్యూమ్"</string>
@@ -3364,7 +3389,7 @@
     <string name="zen_mode_settings_schedules_summary" msgid="2047688589286811617">"{count,plural, =0{ఏవీ లేవు}=1{1 షెడ్యూల్ సెట్ చేయబడింది}other{# షెడ్యూళ్లు సెట్ చేయబడ్డాయి}}"</string>
     <string name="zen_mode_settings_title" msgid="682676757791334259">"అంతరాయం కలిగించవద్దు"</string>
     <string name="zen_modes_list_title" msgid="4796033710444068729">"మోడ్‌లు"</string>
-    <string name="zen_modes_list_intro" msgid="1795379595115088972">"పరధ్యానాలను తగ్గించి, స్లీప్, వర్క్, డ్రైవింగ్, ఇంకా ప్రతిదానికి సంబంధించి మోడ్‌లతో మీ దృష్టిని కంట్రోల్ చేయండి."</string>
+    <string name="zen_modes_list_intro" msgid="1795379595115088972">"డిస్ట్రా‌క్షన్‌ను తగ్గించి, స్లీప్, వర్క్, డ్రైవింగ్, ఇంకా చేస్తున్న పనులకు సంబంధించిన మోడ్‌లతో మీ దృష్టిని కంట్రోల్ చేయండి."</string>
     <string name="zen_modes_add_mode" msgid="5926457160307593664">"మీ సొంత మోడ్‌ను క్రియేట్ చేయండి"</string>
     <string name="zen_mode_settings_summary" msgid="6040862775514495191">"ముఖ్యమైన వ్యక్తులు, యాప్‌ల నుంచి వచ్చే నోటిఫికేషన్‌లను మాత్రమే అందించు"</string>
     <string name="zen_mode_select_schedule" msgid="663163931596092952">"షెడ్యూల్‌ను సెట్ చేయండి"</string>
@@ -4779,7 +4804,8 @@
     <string name="mobile_network_mode_error" msgid="9222056129897416074">"చెల్లని నెట్‌వర్క్ మోడ్<xliff:g id="NETWORKMODEID">%1$d</xliff:g>. విస్మరించు."</string>
     <string name="satellite_setting_title" msgid="2543034229989047673">"శాటిలైట్ మెసేజింగ్"</string>
     <string name="satellite_setting_enabled_summary" msgid="3554127722727530845">"శాటిలైట్ ద్వారా టెక్స్ట్ మెసేజ్‌లను పంపండి, స్వీకరించండి. మీ ఖాతాతో చేర్చబడింది."</string>
-    <string name="satellite_setting_disabled_summary" msgid="6789122487534159857">"శాటిలైట్ ద్వారా టెక్స్ట్ మెసేజ్‌లను పంపండి, స్వీకరించండి. మీ ఖాతాతో చేర్చబడలేదు."</string>
+    <!-- no translation found for satellite_setting_disabled_summary (8428393986403708690) -->
+    <skip />
     <string name="keywords_satellite_setting" msgid="3312183289776517695">"శాటిలైట్ మెసేజింగ్"</string>
     <string name="category_name_about_satellite_messaging" msgid="3756205049485508340">"శాటిలైట్ మెసేజింగ్ గురించిన సమాచారం"</string>
     <string name="title_about_satellite_setting" msgid="9212860038048311345">"మీరు అర్హత కలిగిన <xliff:g id="CARRIER_NAME">%1$s</xliff:g> ఖాతాలో భాగంగా శాటిలైట్ ద్వారా టెక్స్ట్ మెసేజ్‌లను పంపవచ్చు, స్వీకరించవచ్చు"</string>
@@ -5298,10 +5324,8 @@
     <string name="show_captions_enabled" msgid="7089043007924626">"ఆన్‌లో ఉంది"</string>
     <string name="live_caption_disabled" msgid="3562035026547887366">"ఆఫ్‌లో ఉంది"</string>
     <string name="live_caption_enabled" msgid="5269360946200718949">"ఆన్‌లో ఉంది"</string>
-    <!-- no translation found for audio_seek_bar_state_left_first (1641359989891833888) -->
-    <skip />
-    <!-- no translation found for audio_seek_bar_state_right_first (6027686565598201061) -->
-    <skip />
+    <string name="audio_seek_bar_state_left_first" msgid="1641359989891833888">"ఆడియో ఎడమ వైపున <xliff:g id="PERCENT_LEFT">%1$s</xliff:g> మిగిలి ఉంది, కుడి వైపున <xliff:g id="PERCENT_RIGHT">%2$s</xliff:g> మిగిలి ఉంది"</string>
+    <string name="audio_seek_bar_state_right_first" msgid="6027686565598201061">"ఆడియో కుడి వైపున <xliff:g id="PERCENT_RIGHT">%1$s</xliff:g> మిగిలి ఉంది, ఎడమ వైపున <xliff:g id="PERCENT_LEFT">%2$s</xliff:g> మిగిలి ఉంది"</string>
     <string name="about_phone_device_name_warning" msgid="3243226572404472381">"మీరు ఇన్‌స్టాల్ చేసిన యాప్‌లకు మీ పరికరం పేరు కనిపిస్తుంది. మీరు బ్లూటూత్ పరికరాలకు కనెక్ట్ చేసినప్పుడు, Wi-Fi నెట్‌వర్క్‌కు కనెక్ట్ చేసినప్పుడు లేదా Wi-Fi హాట్‌స్పాట్‌ను సెటప్ చేసినప్పుడు ఇతర వ్యక్తులకు కూడా కనబడవచ్చు."</string>
     <string name="grammatical_gender_title" msgid="8584242850477270828">"వ్యాకరణ లింగం"</string>
     <string name="grammatical_gender_dialog_title" msgid="8754048592099871587">"వ్యాకరణ లింగం ఎంచుకోండి"</string>
@@ -5397,6 +5421,7 @@
     <string name="audio_streams_dialog_learn_more" msgid="6711241053442211345">"మరింత తెలుసుకోండి"</string>
     <string name="audio_streams_dialog_cannot_play" msgid="1358828316927479091">"ఈ ఆడియో స్ట్రీమ్‌ను <xliff:g id="DEVICE_NAME">%1$s</xliff:g>‌లో ప్లే చేయడం సాధ్యపడదు."</string>
     <string name="audio_streams_listening_now" msgid="4205614429222949176">"ఇప్పుడు వింటున్నారు"</string>
+    <string name="audio_streams_present_now" msgid="1128360774541089402">"హోస్ట్ పాజ్ చేశారు"</string>
     <string name="audio_streams_media_service_notification_leave_broadcast_text" msgid="4938656134300913647">"వినడాన్ని ఆపివేయండి"</string>
     <string name="audio_streams_dialog_no_le_device_title" msgid="3931163990976742282">"అనుకూల హెడ్‌ఫోన్స్‌ను కనెక్ట్ చేయండి"</string>
     <string name="audio_streams_dialog_no_le_device_button" msgid="4484355549428642588">"పరికరం కనెక్ట్ చేయండి"</string>
