--- a/res/values-tr/strings.xml
+++ b/res/values-tr/strings.xml
@@ -412,6 +412,28 @@
     <string name="security_settings_fingerprint_single_face_watch_preference_summary" msgid="764951912234638192">"Yüz, parmak izi ve <xliff:g id="WATCH">%s</xliff:g> eklendi"</string>
     <string name="security_settings_fingerprint_multiple_face_watch_preference_summary" msgid="3935500711366489380">"Yüz, parmak izleri ve <xliff:g id="WATCH">%s</xliff:g> eklendi"</string>
     <string name="mandatory_biometrics_prompt_description" msgid="6790144699440050735">"Kimlik Kontrolü açık ve biyometrik doğrulama gerektiriyor"</string>
+    <!-- no translation found for go_to_settings (4394928396153474179) -->
+    <skip />
+    <!-- no translation found for identity_check_lockout_error_title (7486409651908283892) -->
+    <skip />
+    <!-- no translation found for identity_check_lockout_error_description_1 (4882147327291296884) -->
+    <skip />
+    <!-- no translation found for identity_check_lockout_error_two_factor_auth_description_1 (8369894114882274736) -->
+    <skip />
+    <!-- no translation found for identity_check_lockout_error_description_2 (5512321457771307067) -->
+    <skip />
+    <!-- no translation found for identity_check_general_error_title (5073929400896102674) -->
+    <skip />
+    <!-- no translation found for identity_check_general_error_description_1 (5260846996256699095) -->
+    <skip />
+    <!-- no translation found for identity_check_biometric_error_cancel (3353689146211669291) -->
+    <skip />
+    <!-- no translation found for identity_check_biometric_error_ok (4535306787363107304) -->
+    <skip />
+    <!-- no translation found for go_to_identity_check (5215846637575231800) -->
+    <skip />
+    <!-- no translation found for identity_check_lockout_error_lock_screen (3021787511681444051) -->
+    <skip />
     <string name="security_settings_remoteauth_preference_title" msgid="8319680328086089533">"Uzaktan Kimlik Doğrulayıcı Kilidini Açma"</string>
     <string name="security_settings_remoteauth_preference_summary" msgid="1507004469316635196">"Kol saati eklendi"</string>
     <string name="security_settings_remoteauth_enroll_introduction_title" msgid="2151004795778999671">"Kol saatinizi kurma"</string>
@@ -796,6 +818,8 @@
     <string name="lockpassword_password_requires_nonnumerical" msgid="389687423482993365">"{count,plural, =1{En az 1 rakam olmayan karakter içermelidir}other{En az # rakam olmayan karakter içermelidir}}"</string>
     <string name="lockpassword_password_recently_used" msgid="5341218079730167191">"Cihaz yöneticisi yakın zamanda kullanılan bir şifreye izin vermiyor"</string>
     <string name="lockpassword_pin_no_sequential_digits" msgid="5843639256988031272">"Artan, azalan veya tekrar eden rakam dizisine izin verilmiyor"</string>
+    <!-- no translation found for lockpassword_password_no_sequential_characters (2191567105898075606) -->
+    <skip />
     <string name="lockpassword_confirm_label" msgid="560897521093566777">"Onayla"</string>
     <string name="lockpassword_clear_label" msgid="311359833434539894">"Temizle"</string>
     <string name="lockpassword_credential_changed" msgid="5934778179732392028">"Ekran kilidi önceden değiştirilmişti. Yeni ekran kilidiyle tekrar deneyin."</string>
@@ -1277,21 +1301,17 @@
     <string name="dark_ui_summary_off_auto_mode_auto" msgid="6766831395970887213">"Güneş battığında otomatik olarak açılacak"</string>
     <string name="dark_ui_summary_off_auto_mode_custom" msgid="1345906088326708376">"Şu saatte otomatik olarak açılacak: <xliff:g id="ID_1">%1$s</xliff:g>"</string>
     <string name="dark_ui_summary_off_auto_mode_custom_bedtime" msgid="7759826673214624622">"Uyku vaktinde otomatik olarak açılır"</string>
-    <!-- no translation found for dark_ui_summary_off_auto_mode_modes (2672694802103388896) -->
-    <skip />
+    <string name="dark_ui_summary_off_auto_mode_modes" msgid="2672694802103388896">"<xliff:g id="ID_1">%1$s</xliff:g> başladığında açılacak"</string>
     <string name="dark_ui_summary_on_auto_mode_never" msgid="2468597062391435521">"Hiçbir zaman otomatik olarak kapatılmayacak"</string>
     <string name="dark_ui_summary_on_auto_mode_auto" msgid="5553376115092648636">"Güneş doğduğunda otomatik olarak kapatılacak"</string>
     <string name="dark_ui_summary_on_auto_mode_custom" msgid="2526935680241734784">"Şu saatte otomatik olarak kapatılacak: <xliff:g id="ID_1">%1$s</xliff:g>."</string>
     <string name="dark_ui_summary_on_auto_mode_custom_bedtime" msgid="1976993025762551246">"Uyku vaktinden sonra otomatik olarak kapatılır"</string>
-    <!-- no translation found for dark_ui_summary_on_auto_mode_modes (7769594183411785087) -->
-    <skip />
+    <string name="dark_ui_summary_on_auto_mode_modes" msgid="7769594183411785087">"<xliff:g id="ID_1">%1$s</xliff:g> sona erdiğinde kapanacak"</string>
     <string name="dark_ui_text" msgid="4392646155331126666">"Koyu tema özelliği, pilinizin daha uzun süre dayanmasını sağlamak için bazı ekranlarda siyah kullanır. Koyu tema, açılmak için ekranınızın kapanmasını beklemeye programlanır."</string>
     <string name="dark_ui_bedtime_footer_summary" msgid="5576501833145170581">"Koyu tema şu anda Uyku Vakti modu programınıza uyuyor."</string>
     <string name="dark_ui_bedtime_footer_action" msgid="1493095487994054339">"Uyku Vakti modu ayarları"</string>
-    <!-- no translation found for dark_ui_modes_footer_summary (1041117250408363391) -->
-    <skip />
-    <!-- no translation found for dark_ui_modes_footer_action (80671811848446248) -->
-    <skip />
+    <string name="dark_ui_modes_footer_summary" msgid="1041117250408363391">"{count,plural,offset:2 =0{Modlar koyu temayı da etkinleştirebilir}=1{{mode_1}, koyu temayı da etkinleştirir}=2{{mode_1} ve {mode_2}, koyu temayı da etkinleştirir}=3{{mode_1}, {mode_2} ve {mode_3}, koyu temayı da etkinleştirir}other{{mode_1}, {mode_2} ve diğer # mod koyu temayı da etkinleştirir}}"</string>
+    <string name="dark_ui_modes_footer_action" msgid="80671811848446248">"Mod ayarları"</string>
     <string name="even_dimmer_display_title" msgid="6731255736830410149">"Parlaklığı azaltın"</string>
     <string name="even_dimmer_display_summary" msgid="120301078873242172">"Cihazın ekran parlaklığının normalden az olmasına izin verin"</string>
     <string name="screen_timeout" msgid="7709947617767439410">"Ekran zaman aşımı"</string>
@@ -1960,10 +1980,14 @@
     <skip />
     <string name="pointer_fill_style_black_button" msgid="4540815366995820960">"İşaretçi dolgu stilini siyah yapın"</string>
     <string name="pointer_fill_style_green_button" msgid="3731413496528067979">"İşaretçi dolgu stilini yeşil yapın"</string>
-    <string name="pointer_fill_style_yellow_button" msgid="5025969961559379024">"İşaretçi dolgu stilini sarı yapın"</string>
+    <!-- no translation found for pointer_fill_style_red_button (6424326623906159283) -->
+    <skip />
     <string name="pointer_fill_style_pink_button" msgid="4106218142489635673">"İşaretçi dolgu stilini pembe yapın"</string>
     <string name="pointer_fill_style_blue_button" msgid="5594958078854032785">"İşaretçi dolgu stilini mavi yapın"</string>
-    <string name="pointer_stroke_style" msgid="1886986630216050665">"İşaretçi çizgi stili"</string>
+    <!-- no translation found for pointer_fill_style_purple_button (3713175300139801778) -->
+    <skip />
+    <!-- no translation found for pointer_stroke_style (139962661485972329) -->
+    <skip />
     <string name="pointer_stroke_style_name_white" msgid="673686194443825383">"Beyaz"</string>
     <string name="pointer_stroke_style_name_black" msgid="4655806167067437330">"Siyah"</string>
     <string name="pointer_stroke_style_name_none" msgid="8953927511729800247">"Yok"</string>
@@ -2245,8 +2269,7 @@
     <string name="accessibility_button_opacity_title" msgid="4727355657530362289">"Kullanımda değilken şeffaflık"</string>
     <string name="accessibility_button_low_label" msgid="4193015407828927741">"Şeffaf"</string>
     <string name="accessibility_button_high_label" msgid="9138077512008190896">"Opak"</string>
-    <!-- no translation found for accessibility_button_disabled_button_mode_summary (1978174613270619492) -->
-    <skip />
+    <string name="accessibility_button_disabled_button_mode_summary" msgid="1978174613270619492">"Gezinme çubuğu düğme modundayken kullanılamaz."</string>
     <string name="accessibility_toggle_high_text_contrast_preference_title" msgid="1830189632458752698">"Yüksek kontrastlı metin"</string>
     <string name="accessibility_toggle_high_text_contrast_preference_summary" msgid="5286411556836346180">"Metin rengini siyah veya beyaz olarak değiştirin. Arka planla kontrast en üst düzeye çıkar."</string>
     <string name="accessibility_toggle_maximize_text_contrast_preference_title" msgid="8737272017343509753">"Metin kontrastını maksimuma çıkar"</string>
@@ -3320,7 +3343,10 @@
     <string name="keywords_always_show_time_info" msgid="1066752498285497595">"ambiyans ekranı her zaman açık, AOD"</string>
     <string name="keywords_change_nfc_tag_apps_state" msgid="9032287964590554366">"nfc, etiket, okuyucu"</string>
     <string name="keywords_keyboard_vibration" msgid="6485149510591654697">"klavye, dokunma teknolojisi, titreşim"</string>
-    <string name="sound_dashboard_summary" msgid="6574444810552643312">"Ses düzeyi, titreşim, Rahatsız Etmeyin"</string>
+    <!-- no translation found for sound_dashboard_summary (8254699132423665654) -->
+    <skip />
+    <!-- no translation found for sound_dashboard_summary_with_dnd (731956092218394657) -->
+    <skip />
     <string name="media_volume_option_title" msgid="5966569685119475630">"Medya ses düzeyi"</string>
     <string name="remote_media_volume_option_title" msgid="8760846743943305764">"Yayın ses düzeyi"</string>
     <string name="call_volume_option_title" msgid="1461105986437268924">"Arama ses düzeyi"</string>
@@ -3372,7 +3398,7 @@
     <string name="zen_modes_list_intro" msgid="1795379595115088972">"Uyku, çalışma, sürüş gibi çeşitli modlarla dikkat dağıtan unsurları azaltıp istediğiniz yere odaklanın."</string>
     <string name="zen_modes_add_mode" msgid="5926457160307593664">"Kendi modunuzu oluşturun"</string>
     <string name="zen_mode_settings_summary" msgid="6040862775514495191">"Yalnızca önemli kişiler ve uygulamalardan gelen bildirimleri alın"</string>
-    <string name="zen_mode_select_schedule" msgid="663163931596092952">"Program ayarlama"</string>
+    <string name="zen_mode_select_schedule" msgid="663163931596092952">"Program ayarla"</string>
     <string name="zen_mode_select_schedule_title" msgid="4260344424438327309">"Program ölçütü:"</string>
     <string name="zen_mode_select_schedule_time" msgid="1951968104691941146">"Gün ve saat"</string>
     <string name="zen_mode_select_schedule_time_example" msgid="2690518300573994725">"\"hafta içi 09:00-17:00\""</string>
@@ -3424,13 +3450,13 @@
     <string name="mode_display_options_section" msgid="5151597748243866532">"Görüntüleme seçenekleri"</string>
     <string name="mode_grayscale_title" msgid="6027553257331235461">"Gri tonlama"</string>
     <string name="mode_grayscale_title_secondary_list" msgid="2662593380253642581">"gri tonlama"</string>
-    <string name="mode_grayscale_summary" msgid="6682099523626777038">"Ekranı siyah beyaz olarak değiştirin"</string>
+    <string name="mode_grayscale_summary" msgid="6682099523626777038">"Ekranı siyah beyaz olarak değiştir"</string>
     <string name="mode_aod_title" msgid="5903435070341237325">"Ekran kapalı kalsın"</string>
     <string name="mode_aod_title_secondary_list" msgid="8268180392811027557">"ekran kapalı kalsın"</string>
     <string name="mode_aod_summary" msgid="7516159044827627065">"Her zaman açık ekranı devre dışı bırak"</string>
     <string name="mode_wallpaper_title" msgid="5549693923133928374">"Duvar kağıdını karart"</string>
     <string name="mode_wallpaper_title_secondary_list" msgid="5034602021811580157">"duvar kağıdını karart"</string>
-    <string name="mode_wallpaper_summary" msgid="665480011615603784">"Duvar kağıdının parlaklığını filtreleyin"</string>
+    <string name="mode_wallpaper_summary" msgid="665480011615603784">"Duvar kağıdının parlaklığını filtrele"</string>
     <string name="mode_dark_theme_title" msgid="8099007897943513209">"Koyu temayı etkinleştir"</string>
     <string name="mode_dark_theme_title_secondary_list" msgid="4761262694149772845">"koyu temayı etkinleştir"</string>
     <string name="mode_dark_theme_summary" msgid="8428887193785431898">"İşletim sistemini ve uygulamaları, koyu arka plan üzerinde açık renkli metin kullanacak şekilde değiştirin. Böylece gözünüz yorulmaz ve bazı cihazlarda önemli ölçüde pil tasarrufu yapabilirsiniz"</string>
@@ -3684,8 +3710,8 @@
     <string name="notif_listener_not_migrated" msgid="6265206376374278226">"Bu uygulama, gelişmiş ayarları desteklemiyor"</string>
     <string name="notif_listener_more_settings" msgid="1348409392307208921">"Diğer ayarlar"</string>
     <string name="notif_listener_more_settings_desc" msgid="7995492074281663658">"Bu uygulamada daha fazla ayar mevcut"</string>
-    <string name="notification_polite_title" msgid="6121016426991791557">"Bildirim bekleme süresi"</string>
-    <string name="notification_polite_main_control_title" msgid="5812529809151927149">"Bildirim şiddetini düşürmeyi kullanın"</string>
+    <string name="notification_polite_title" msgid="6121016426991791557">"Bildirim şiddetini düşür"</string>
+    <string name="notification_polite_main_control_title" msgid="5812529809151927149">"Bildirim şiddetini düşürmeyi kullan"</string>
     <string name="notification_polite_description" msgid="5497748284893832854">"Kısa süre içinde çok sayıda bildirim aldığınızda cihazınız 2 dakika boyunca sesi kısar ve uyarıları azaltır. Aramalar, alarmlar ve öncelikli görüşmeler bu durumdan etkilenmez. \n\nBildirim şiddeti düşürülürken aldığınız bildirimlere ekranın üst tarafından aşağı doğru çekerek ulaşabilirsiniz."</string>
     <string name="notification_polite_work" msgid="8823596456640216391">"İş profillerine uygula"</string>
     <string name="notification_polite_work_summary" msgid="5014189280132951378">"İş profili uygulamalarına uygulayın"</string>
@@ -4121,7 +4147,7 @@
     <string name="zen_access_revoke_warning_dialog_summary" msgid="8689801842914183595">"Bu uygulama tarafından oluşturulmuş tüm Rahatsız Etmeyin kuralları kaldırılacak."</string>
     <string name="zen_modes_access_warning_dialog_title" msgid="8372164559156809659">"<xliff:g id="APP">%1$s</xliff:g> uygulamasının Modlar\'a erişmesine izin verilsin mi?"</string>
     <string name="zen_modes_access_warning_dialog_summary" msgid="2432178679607798200">"Uygulama; Rahatsız Etmeyin özelliğini açıp kapatabilecek, Modlar\'ı yönetip etkinleştirebilecek ve ilgili ayarları değiştirebilecek."</string>
-    <string name="zen_modes_access_revoke_warning_dialog_title" msgid="189454396436517964">"<xliff:g id="APP">%1$s</xliff:g> uygulamasının Modlar iznine erişimi iptal edilsin mi?"</string>
+    <string name="zen_modes_access_revoke_warning_dialog_title" msgid="189454396436517964">"<xliff:g id="APP">%1$s</xliff:g> uygulamasının Modlar\'a erişim izni iptal edilsin mi?"</string>
     <string name="zen_modes_access_revoke_warning_dialog_summary" msgid="4669243849023204217">"Bu uygulama tarafından oluşturulmuş tüm modlar kaldırılacak."</string>
     <string name="ignore_optimizations_on" msgid="6865583039303804932">"Optimize etme"</string>
     <string name="ignore_optimizations_off" msgid="9186557038453586295">"Optimize et"</string>
@@ -4784,7 +4810,8 @@
     <string name="mobile_network_mode_error" msgid="9222056129897416074">"<xliff:g id="NETWORKMODEID">%1$d</xliff:g> Geçersiz Ağ Modu. Yoksayın."</string>
     <string name="satellite_setting_title" msgid="2543034229989047673">"Uydu üzerinden mesajlaşma"</string>
     <string name="satellite_setting_enabled_summary" msgid="3554127722727530845">"Uydu üzerinden kısa mesaj gönderip alın. Hesabınıza dahil edilir."</string>
-    <string name="satellite_setting_disabled_summary" msgid="6789122487534159857">"Uydu üzerinden kısa mesaj gönderip alın. Hesabınıza dahil edilmez."</string>
+    <!-- no translation found for satellite_setting_disabled_summary (8428393986403708690) -->
+    <skip />
     <string name="keywords_satellite_setting" msgid="3312183289776517695">"Uydu üzerinden mesajlaşma"</string>
     <string name="category_name_about_satellite_messaging" msgid="3756205049485508340">"Uydu üzerinden mesajlaşma hakkında"</string>
     <string name="title_about_satellite_setting" msgid="9212860038048311345">"Uygun bir <xliff:g id="CARRIER_NAME">%1$s</xliff:g> hesabınız varsa uydu üzerinden kısa mesaj gönderip alabilirsiniz"</string>
@@ -5303,10 +5330,8 @@
     <string name="show_captions_enabled" msgid="7089043007924626">"Açık"</string>
     <string name="live_caption_disabled" msgid="3562035026547887366">"Kapalı"</string>
     <string name="live_caption_enabled" msgid="5269360946200718949">"Açık"</string>
-    <!-- no translation found for audio_seek_bar_state_left_first (1641359989891833888) -->
-    <skip />
-    <!-- no translation found for audio_seek_bar_state_right_first (6027686565598201061) -->
-    <skip />
+    <string name="audio_seek_bar_state_left_first" msgid="1641359989891833888">"Ses <xliff:g id="PERCENT_LEFT">%1$s</xliff:g> sol, <xliff:g id="PERCENT_RIGHT">%2$s</xliff:g> sağ"</string>
+    <string name="audio_seek_bar_state_right_first" msgid="6027686565598201061">"Ses <xliff:g id="PERCENT_RIGHT">%1$s</xliff:g> sağ, <xliff:g id="PERCENT_LEFT">%2$s</xliff:g> sol"</string>
     <string name="about_phone_device_name_warning" msgid="3243226572404472381">"Yüklediğiniz uygulamalar, cihazınızın adını görebilecek. Cihazınızın adı ayrıca Bluetooth cihazlara bağlandığınızda, kablosuz ağa bağlandığınızda veya kablosuz hotspot oluşturduğunuzda diğer kişiler tarafından görülecektir."</string>
     <string name="grammatical_gender_title" msgid="8584242850477270828">"Dil bilgisine uygun cinsiyet"</string>
     <string name="grammatical_gender_dialog_title" msgid="8754048592099871587">"Dil bilgisine uygun cinsiyet seçin"</string>
@@ -5402,6 +5427,8 @@
     <string name="audio_streams_dialog_learn_more" msgid="6711241053442211345">"Daha fazla bilgi"</string>
     <string name="audio_streams_dialog_cannot_play" msgid="1358828316927479091">"Bu ses yayını, <xliff:g id="DEVICE_NAME">%1$s</xliff:g> adlı cihazda oynatılamıyor."</string>
     <string name="audio_streams_listening_now" msgid="4205614429222949176">"Şu anda dinleniyor"</string>
+    <!-- no translation found for audio_streams_present_now (1128360774541089402) -->
+    <skip />
     <string name="audio_streams_media_service_notification_leave_broadcast_text" msgid="4938656134300913647">"Dinlemeyi bırak"</string>
     <string name="audio_streams_dialog_no_le_device_title" msgid="3931163990976742282">"Uyumlu kulaklık bağlayın"</string>
     <string name="audio_streams_dialog_no_le_device_button" msgid="4484355549428642588">"Cihaz bağla"</string>
