--- a/res/values-ur/strings.xml
+++ b/res/values-ur/strings.xml
@@ -412,6 +412,28 @@
     <string name="security_settings_fingerprint_single_face_watch_preference_summary" msgid="764951912234638192">"چہرہ، فنگر پرنٹ اور <xliff:g id="WATCH">%s</xliff:g> شامل کیے گئے"</string>
     <string name="security_settings_fingerprint_multiple_face_watch_preference_summary" msgid="3935500711366489380">"چہرہ، فنگر پرنٹس اور <xliff:g id="WATCH">%s</xliff:g> شامل کیے گئے"</string>
     <string name="mandatory_biometrics_prompt_description" msgid="6790144699440050735">"شناختی چیک آن ہے اور اس کے لیے بائیو میٹرک کی ضرورت ہے"</string>
+    <!-- no translation found for go_to_settings (4394928396153474179) -->
+    <skip />
+    <!-- no translation found for identity_check_lockout_error_title (7486409651908283892) -->
+    <skip />
+    <!-- no translation found for identity_check_lockout_error_description_1 (4882147327291296884) -->
+    <skip />
+    <!-- no translation found for identity_check_lockout_error_two_factor_auth_description_1 (8369894114882274736) -->
+    <skip />
+    <!-- no translation found for identity_check_lockout_error_description_2 (5512321457771307067) -->
+    <skip />
+    <!-- no translation found for identity_check_general_error_title (5073929400896102674) -->
+    <skip />
+    <!-- no translation found for identity_check_general_error_description_1 (5260846996256699095) -->
+    <skip />
+    <!-- no translation found for identity_check_biometric_error_cancel (3353689146211669291) -->
+    <skip />
+    <!-- no translation found for identity_check_biometric_error_ok (4535306787363107304) -->
+    <skip />
+    <!-- no translation found for go_to_identity_check (5215846637575231800) -->
+    <skip />
+    <!-- no translation found for identity_check_lockout_error_lock_screen (3021787511681444051) -->
+    <skip />
     <string name="security_settings_remoteauth_preference_title" msgid="8319680328086089533">"‏Remote Authenticator کو غیر مقفل کریں"</string>
     <string name="security_settings_remoteauth_preference_summary" msgid="1507004469316635196">"گھڑی کو شامل کیا گیا"</string>
     <string name="security_settings_remoteauth_enroll_introduction_title" msgid="2151004795778999671">"اپنی گھڑی سیٹ اپ کریں"</string>
@@ -796,6 +818,8 @@
     <string name="lockpassword_password_requires_nonnumerical" msgid="389687423482993365">"{count,plural, =1{کم از کم 1 غیر عددی حرف پر مشتمل ہونا چاہیے}other{کم از کم # غیر عددی حروف پر مشتمل ہونا چاہیے}}"</string>
     <string name="lockpassword_password_recently_used" msgid="5341218079730167191">"آلے کا منتظم ایک حالیہ پاس ورڈ کا استعمال کرنے کی اجازت نہیں دیتا ہے"</string>
     <string name="lockpassword_pin_no_sequential_digits" msgid="5843639256988031272">"ہندسوں کی صعودی، نزولی یا مکرر ترتیب کی اجازت نہیں ہے"</string>
+    <!-- no translation found for lockpassword_password_no_sequential_characters (2191567105898075606) -->
+    <skip />
     <string name="lockpassword_confirm_label" msgid="560897521093566777">"تصدیق کریں"</string>
     <string name="lockpassword_clear_label" msgid="311359833434539894">"صاف کریں"</string>
     <string name="lockpassword_credential_changed" msgid="5934778179732392028">"اسکرین لاک کو پہلے ہی تبدیل کر دیا گیا۔ نئے اسکرین لاک کے ساتھ دوبارہ کوشش کریں۔"</string>
@@ -1952,14 +1976,17 @@
     <string name="trackpad_bottom_right_tap_title" msgid="230337692279220068">"نیچے دایاں کلک کرنا"</string>
     <string name="trackpad_bottom_right_tap_summary" msgid="4467915480282133447">"مزید اختیارات کے لیے ٹچ پیڈ کے نیچے بائیں کونے پر کلک کریں"</string>
     <string name="trackpad_pointer_speed" msgid="7786579408631352625">"پوائنٹر کی رفتار"</string>
-    <!-- no translation found for pointer_fill_style (8794616790175016092) -->
-    <skip />
+    <string name="pointer_fill_style" msgid="8794616790175016092">"پوائنٹر کا رنگ"</string>
     <string name="pointer_fill_style_black_button" msgid="4540815366995820960">"پوائنٹر فِل اسٹائل کو سیاہ میں بدلیں"</string>
     <string name="pointer_fill_style_green_button" msgid="3731413496528067979">"پوائنٹر فِل اسٹائل کو سبز میں بدلیں"</string>
-    <string name="pointer_fill_style_yellow_button" msgid="5025969961559379024">"پوائنٹر فِل اسٹائل کو پیلے میں بدلیں"</string>
+    <!-- no translation found for pointer_fill_style_red_button (6424326623906159283) -->
+    <skip />
     <string name="pointer_fill_style_pink_button" msgid="4106218142489635673">"پوائنٹر فِل اسٹائل کو گلابی میں بدلیں"</string>
     <string name="pointer_fill_style_blue_button" msgid="5594958078854032785">"پوائنٹر فِل اسٹائل کو نیلے میں بدلیں"</string>
-    <string name="pointer_stroke_style" msgid="1886986630216050665">"پوائنٹر اسٹروک اسٹائل"</string>
+    <!-- no translation found for pointer_fill_style_purple_button (3713175300139801778) -->
+    <skip />
+    <!-- no translation found for pointer_stroke_style (139962661485972329) -->
+    <skip />
     <string name="pointer_stroke_style_name_white" msgid="673686194443825383">"سفید"</string>
     <string name="pointer_stroke_style_name_black" msgid="4655806167067437330">"سیاہ"</string>
     <string name="pointer_stroke_style_name_none" msgid="8953927511729800247">"کوئی نہیں"</string>
@@ -2070,12 +2097,9 @@
     <string name="general_category_title" msgid="6298579528716834157">"عام"</string>
     <string name="display_category_title" msgid="6638191682294461408">"ڈسپلے"</string>
     <string name="accessibility_color_and_motion_title" msgid="2323301706545305874">"رنگ اور موشَن"</string>
-    <!-- no translation found for accessibility_pointer_and_touchpad_title (8719482393177273831) -->
-    <skip />
-    <!-- no translation found for accessibility_pointer_and_touchpad_summary (6089872217234956258) -->
-    <skip />
-    <!-- no translation found for accessibility_pointer_color_customization_title (3376392766113189508) -->
-    <skip />
+    <string name="accessibility_pointer_and_touchpad_title" msgid="8719482393177273831">"پوائنٹر اور ٹچ پیڈ ایکسیسبیلٹی"</string>
+    <string name="accessibility_pointer_and_touchpad_summary" msgid="6089872217234956258">"پوائنٹر کا رنگ، پوائنٹر کا سائز اور مزید"</string>
+    <string name="accessibility_pointer_color_customization_title" msgid="3376392766113189508">"پوائنٹر رنگ حسب ضرورت"</string>
     <string name="accessibility_color_contrast_title" msgid="5757724357142452378">"رنگ کا کنٹراسٹ"</string>
     <string name="accessibility_color_contrast_intro" msgid="7795090401101214930">"زیادہ کنٹراسٹ ٹیکسٹ، بٹنز اور آئیکنز کو مزید نمایاں کرتا ہے۔ اس کنٹراسٹ کا انتخاب کریں جو آپ کو بہترین لگتا ہو۔"</string>
     <string name="color_contrast_note" msgid="7592686603372566198">"ہو سکتا ہے کچھ ایپس تمام رنگ اور ٹیکسٹ کے کنٹراسٹ کی ترتیبات کو سپورٹ نہ کریں"</string>
@@ -3315,7 +3339,8 @@
     <string name="keywords_always_show_time_info" msgid="1066752498285497595">"‏ہمیشہ آن ایمبیئنٹ ڈسپلے، AOD"</string>
     <string name="keywords_change_nfc_tag_apps_state" msgid="9032287964590554366">"‏nfc، ٹیگ، ریڈر"</string>
     <string name="keywords_keyboard_vibration" msgid="6485149510591654697">"کی بورڈ، ہیپٹکس، وائبریٹ،"</string>
-    <string name="sound_dashboard_summary" msgid="6574444810552643312">"والیوم، ارتعاش، ڈسٹرب نہ کریں"</string>
+    <string name="sound_dashboard_summary" msgid="8254699132423665654">"والیوم اور وائبریشن"</string>
+    <string name="sound_dashboard_summary_with_dnd" msgid="731956092218394657">"والیوم، وائبریشن، ڈسٹرب نہ کریں"</string>
     <string name="media_volume_option_title" msgid="5966569685119475630">"میڈیا والیوم"</string>
     <string name="remote_media_volume_option_title" msgid="8760846743943305764">"والیوم کاسٹ کریں"</string>
     <string name="call_volume_option_title" msgid="1461105986437268924">"کال کا والیوم"</string>
@@ -4779,7 +4804,8 @@
     <string name="mobile_network_mode_error" msgid="9222056129897416074">"غلط نیٹ ورک موڈ <xliff:g id="NETWORKMODEID">%1$d</xliff:g>۔ نظر انداز کریں۔"</string>
     <string name="satellite_setting_title" msgid="2543034229989047673">"سٹلائٹ پیغام رسانی"</string>
     <string name="satellite_setting_enabled_summary" msgid="3554127722727530845">"سیٹلائٹ کے ذریعے ٹیکسٹ پیغامات بھیجیں اور موصول کریں۔ آپ کے اکاؤنٹ میں شامل ہے۔"</string>
-    <string name="satellite_setting_disabled_summary" msgid="6789122487534159857">"سیٹلائٹ کے ذریعے ٹیکسٹ پیغامات بھیجیں اور موصول کریں۔ آپ کے اکاؤنٹ میں شامل نہیں ہے۔"</string>
+    <!-- no translation found for satellite_setting_disabled_summary (8428393986403708690) -->
+    <skip />
     <string name="keywords_satellite_setting" msgid="3312183289776517695">"سٹلائٹ پیغام رسانی"</string>
     <string name="category_name_about_satellite_messaging" msgid="3756205049485508340">"سیٹلائٹ پیغام رسانی کے بارے میں"</string>
     <string name="title_about_satellite_setting" msgid="9212860038048311345">"آپ ایک اہل <xliff:g id="CARRIER_NAME">%1$s</xliff:g> اکاؤنٹ کے حصے کے طور پر سیٹلائٹ کے ذریعے ٹیکسٹ پیغامات بھیج اور موصول کر سکتے ہیں۔"</string>
@@ -5298,10 +5324,8 @@
     <string name="show_captions_enabled" msgid="7089043007924626">"آن ہے"</string>
     <string name="live_caption_disabled" msgid="3562035026547887366">"آف ہے"</string>
     <string name="live_caption_enabled" msgid="5269360946200718949">"آن ہے"</string>
-    <!-- no translation found for audio_seek_bar_state_left_first (1641359989891833888) -->
-    <skip />
-    <!-- no translation found for audio_seek_bar_state_right_first (6027686565598201061) -->
-    <skip />
+    <string name="audio_seek_bar_state_left_first" msgid="1641359989891833888">"آڈیو <xliff:g id="PERCENT_LEFT">%1$s</xliff:g> بایاں، <xliff:g id="PERCENT_RIGHT">%2$s</xliff:g> دایاں"</string>
+    <string name="audio_seek_bar_state_right_first" msgid="6027686565598201061">"آڈیو <xliff:g id="PERCENT_RIGHT">%1$s</xliff:g> دایاں، <xliff:g id="PERCENT_LEFT">%2$s</xliff:g> بایاں"</string>
     <string name="about_phone_device_name_warning" msgid="3243226572404472381">"‏آپ کے آلے کا نام آپ کی انسٹال کردہ ایپس میں دکھائی دیتا ہے۔ آپ کے بلوٹوتھ آلات سے منسلک ہونے، Wi-Fi نیٹ ورک سے منسلک ہونے یا Wi-Fi ہاٹ اسپاٹ کو سیٹ اپ کرنے پر دوسرے لوگ بھی اسے دیکھ سکتے ہیں۔"</string>
     <string name="grammatical_gender_title" msgid="8584242850477270828">"قواعد سے متعلق صنف"</string>
     <string name="grammatical_gender_dialog_title" msgid="8754048592099871587">"قواعد سے متعلق صنف منتخب کریں"</string>
@@ -5397,6 +5421,7 @@
     <string name="audio_streams_dialog_learn_more" msgid="6711241053442211345">"مزید جانیں"</string>
     <string name="audio_streams_dialog_cannot_play" msgid="1358828316927479091">"<xliff:g id="DEVICE_NAME">%1$s</xliff:g> پر یہ آڈیو سلسلہ نہیں چلا سکتے۔"</string>
     <string name="audio_streams_listening_now" msgid="4205614429222949176">"ابھی سنائی دے رہا ہے"</string>
+    <string name="audio_streams_present_now" msgid="1128360774541089402">"میزبان کے ذریعے موقوف کردہ"</string>
     <string name="audio_streams_media_service_notification_leave_broadcast_text" msgid="4938656134300913647">"سننا بند کریں"</string>
     <string name="audio_streams_dialog_no_le_device_title" msgid="3931163990976742282">"موافق ہیڈ فونز منسلک کریں"</string>
     <string name="audio_streams_dialog_no_le_device_button" msgid="4484355549428642588">"آلہ منسلک کریں"</string>
